--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "Научете повече за основните характеристики на Smart Support",
     "smart_energy_helps": "Smart Energy ви помага да наблюдавате и поддържате устройствата в енергийно ефективно състояние",
     "smart_energy_helps_1_content": "Активен ECO режим на вашите уреди. Статистически анализира консумацията на енергия на устройството. Наблюдавайте данните за пестене на енергия и задайте цел за потребление на енергия.",
-    "smart_energy_helps_2": "2. Мониторинг на потреблението на енергия",
-    "smart_energy_helps_2_content": "Изчислете потреблението на енергия и вода за цялата къща на дневна, месечна и годишна база. можете също да видите статистиката за потреблението на отделните устройства, съотношението на потреблението на енергия на всяко устройство в рамките на избрания период, общото и индивидуалното потребление на енергия.",
-    "smart_energy_helps_3": "3. Енергиен асистент",
     "smart_energy_helps_3_content": "Задайте цели за пестене на енергия и изпращайте известия до потребителите, когато зададените целеви стойности бъдат достигнати.",
     "air_care_helps": "Air care има за цел да разреши интелигентния контрол на температурата, влажността и въздуха в цялата къща",
-    "air_care_helps_1": "1. Оценка на въздуха",
-    "air_care_helps_1_content": "Наблюдавайте състоянието на температурата и влажността на всяка стая в реално време и предоставяйте оценки на комфорта и напомняния въз основа на състоянието на въздуха",
-    "air_care_helps_2": "2. Оптимизация с едно кликване",
     "air_care_helps_2_content": "Оптимизацията може да се стартира с едно кликване. Предлагаме пет различни схеми за оптимизация. Всеки режим на оптимизация може да се регулира според нуждите на потребителя, предоставяйки на потребителите персонализирани решения за оптимизация.",
-    "air_care_helps_3": "3.3D изглед на стаята",
     "air_care_helps_3_content": "Следете състоянието и уредите в стаята си чрез детайлна 3D визуализация на вашия дом.",
     "smart_laundry_key": "Интелигентно пране",
     "smart_laundry_helps": "Smart Laundry предлага експертни съвети за пране, интуитивен асистент за пране и безпроблемно управление на препаратите, осигурявайки несравнимо изживяване при пране",
-    "smart_laundry_helps_1": "1. Персонализирано пране",
     "smart_laundry_helps_1_content": "Персонализирани цикли, базирани на потребителски профили и предпочитания, с етикети за различни сезони, дейности на открито, грижи за бебето и др.",
-    "smart_laundry_helps_2": "2. Управление на детергентите",
     "smart_laundry_helps_2_content": "Оптимизирайте рутинното си пране с Smart Home Laundry Assistant, автоматично разпознавайте марките перилни препарати и управлявайте дозировката във вашата пералня.",
-    "smart_laundry_helps_3": "3. Доклад за използване на пране",
     "smart_laundry_helps_3_content": "Показва седмични, месечни и годишни отчети за използването от страна на потребителя на програмата за пране, както и месечното потребление на вода и електричество и почистване на барабана.",
     "smart_kitchen_key": "Умна кухня",
     "smart_kitchen_helps": "Smart Kitchen ви предоставя безпрецедентно интелигентно готварско изживяване, включително интелигентни рецепти, комбиниране на вина, асистенти за рецепти и управление на съставките, виното и напитките",
-    "smart_kitchen_helps_1": "1. Рецепта на главния готвач",
     "smart_kitchen_helps_1_content": "Насладете се на майсторски рецепти с уникални вкусове, когато се готвят в различни фурни, които следват инструкциите за готвене на рецептата само с едно щракване.",
-    "smart_kitchen_helps_2": "2. Асистент за рецепти",
     "smart_kitchen_helps_2_content": "Персонализирайте и генерирайте рецепти въз основа на вашите лични предпочитания, включително хранене, кухни, начин на живот и алергии.",
-    "smart_kitchen_helps_3": "3. Управление на храните",
     "smart_kitchen_helps_3_content": "Добавете и прегледайте подробности за често използвани съставки, като срок на годност. Бързо съпоставете подходящи рецепти за храна и изпратите липсващите съставки в списъка за пазаруване.",
-    "smart_kitchen_helps_4": "Управление на напитките",
     "smart_kitchen_helps_4_content": "Добавете напитки и създайте списък за пиене, вижте подробна информация за всяко едно съхранено пиене.",
-    "smart_kitchen_helps_5": "Винен инвентар",
     "smart_kitchen_helps_5_content": "Сканирайте, за да създадете списък с винарски изби от VIvino, задайте напомняния за оптимален период на пиене и препоръчайте съчетаване на храна въз основа на вида вино.",
-    "smart_kitchen_helps_6": "6. Списък за пазаруване",
     "smart_kitchen_helps_6_content": "Генерирайте списъка за пазаруване въз основа на рецептата, маркирайте артикулите, които вече притежавате и сте придобили като справка за пазаруване.",
     "smart_support_key": "Интелигентна поддръжка",
     "smart_support_helps": "Smart Support предоставя цялостна помощ за вашите устройства. Можете да получите съвети за почистване и грижа за ежедневна поддръжка, самодиагностика с едно щракване, за да проверите състоянието на всичките си устройства и да предоставите възможни решения за всякакви необичайни операции",
-    "smart_support_helps_1": "1. Съвети за почистване и поддръжка",
     "smart_support_helps_1_content": "Дайте предложения за ежедневно почистване и поддръжка на продукта.",
-    "smart_support_helps_2": "2. Самодиагностика с едно кликване",
     "smart_support_helps_2_content": "Самопроверка с едно кликване, за да разберете състоянието на всички домакински уреди. Когато бъде открит проблем, дайте препоръчани решения.",
-    "smart_support_helps_3": "Отстраняване на неизправности",
     "smart_support_helps_3_content": "Когато устройството има проблем, потребителите могат да си помогнат сами, да отстранят проблема и да разрешат проблема според ръководството за грешки.",
-    "smart_support_helps_4": "4.Докладвайте за проблем",
     "smart_support_helps_4_content": "Ако има проблеми с приложението или използването на продукта, потребителите могат да дадат обратна връзка онлайн, за да намалят времето за комуникация с кол центъра.",
-    "smart_support_helps_5": "5. Свържете се с нас",
     "smart_support_helps_5_content": "Потребителите могат да се свържат с нас чрез телефон, имейл и официален уебсайт.",
     "block_key": "Блокирайте",
     "guide_tips_device_1": "Това е <b> новият раздел на началната страница. </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "Устройството се нуждае от внимание.",
     "CL_DV_RF_next_cleaning_will_be": "Следващото почистване ще бъде **",
     "CL_DV_RF_last_clean_was": "Последното почистване беше **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Съвети за почистване и поддръжка",
     "CL_CF_AS_needs_attention": "Устройството се нуждае от внимание.",
     "CL_CF_AS_run_normal_condition": "Вашето устройство работи в нормално състояние.",
     "CL_DV_WM_offline_content1": "Проверете дали уредът ви е включен и има захранване.",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "Изключително горещ",
     "CL_CF_HP_card": "карта",
     "CL_CF_HP_enter_card_name": "Въведете име на картата...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Моля, изберете поне една съставка.",
     "CL_CF_FM_no_shopping_items": "Няма артикули за пазаруване",
     "CL_CF_FM_add_food_from_below": "Добавете храна отдолу",
     "CL_CF_FM_x_has_been_removed": "** е премахнат.",
-    "CL_CF_CO_waiting": "чакане"
+    "CL_CF_CO_waiting": "чакане",
+    "CL_CF_HP_delete_card_tips": "Сигурни ли сте, че искате да изтриете картата?",
+    "smart_energy_helps_1": "1. Еко с едно щракване",
+    "smart_energy_helps_2": "2. Мониторинг на потреблението на енергия",
+    "smart_energy_helps_3": "3. Енергиен асистент",
+    "air_care_helps_1": "1. Оценка на въздуха",
+    "smart_laundry_helps_2": "2. Управление на детергентите",
+    "air_care_helps_2": "2. Оптимизация с едно кликване",
+    "air_care_helps_3": "3. 3D изглед на стаята",
+    "smart_laundry_helps_1": "1. Персонализирано пране",
+    "smart_laundry_helps_3": "3. Доклад за използване на прането",
+    "smart_kitchen_helps_1": "1. Рецепта на главния готвач",
+    "smart_kitchen_helps_2": "2. Асистент за рецепти",
+    "smart_kitchen_helps_3": "3. Управление на храната",
+    "smart_kitchen_helps_4": "4. Управление на напитките",
+    "smart_kitchen_helps_5": "5. Винен инвентар",
+    "smart_kitchen_helps_6": "6. Списък за пазаруване",
+    "smart_support_helps_1": "1. Съвети за почистване и поддръжка",
+    "smart_support_helps_2": "2. Самодиагностика с едно кликване",
+    "smart_support_helps_4": "4. Докладвайте за проблем",
+    "smart_support_helps_5": "5. Свържете се с нас",
+    "CL_SL_CM_about_usage_month_desc": "Показаните данни са приблизителни, а не точни измервания. \\n Нашите оценки се основават на контролирани тестове, така че действителните ви резултати може да варират. \\n Реалното потребление на енергия зависи от вашата специфична среда и навици.",
+    "air_care_helps_1_content": "Наблюдавайте състоянието на температурата и влажността на всяка стая в реално време и предоставяйте оценки на комфорта и напомняния въз основа на състоянието на въздуха.",
+    "smart_energy_helps_2_content": "Изчислете потреблението на енергия и вода за цялата къща на дневна, месечна и годишна база. Можете също така да видите статистиката за потреблението на отделните устройства, съотношението на потреблението на енергия на всяко устройство в рамките на избрания период, общото и индивидуалното потребление на енергия.",
+    "smart_support_helps_3": "3. Отстраняване на неизправности"
 }
