--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "Lue lisää Smart Supportin tärkeimmistä ominaisuuksista",
     "smart_energy_helps": "Smart Energy auttaa sinua valvomaan ja pitämään laitteita energiatehokkaassa tilassa",
     "smart_energy_helps_1_content": "Laitteidesi aktiivinen ECO-tila. Analysoi tilastollisesti laitteen energiankulutus. Seuraa energiansäästötietoja ja aseta energiankäyttötavoite.",
-    "smart_energy_helps_2": "2. Energiankulutuksen seuranta",
-    "smart_energy_helps_2_content": "Laske koko talon sähkön- ja vedenkulutus päivittäin, kuukausittain ja vuosittain. Näet myös yksittäisten laitteiden kulutustilastot, kunkin laitteen energiankulutuksen osuuden valitulla ajanjaksolla, kokonais- ja yksittäisen energiankulutuksen.",
-    "smart_energy_helps_3": "3. Energy Assistant",
     "smart_energy_helps_3_content": "Aseta energiansäästötavoitteet ja lähetä ilmoituksia käyttäjille, kun asetetut tavoitearvot saavutetaan.",
     "air_care_helps": "Ilmanhoito pyrkii ratkaisemaan koko talon älykkään lämpötilan, kosteuden ja ilman hallinnan",
-    "air_care_helps_1": "1. Ilman arviointi",
-    "air_care_helps_1_content": "Seuraa jokaisen huoneen lämpötilaa ja kosteutta reaaliajassa ja anna mukavuusarvioita ja muistutuksia ilmaston perusteella",
-    "air_care_helps_2": "2. Yhden napsautuksen optimointi",
     "air_care_helps_2_content": "Optimointi voidaan aloittaa yhdellä napsautuksella. Tarjoamme viisi erilaista optimointimallia. Jokainen optimointitila voidaan säätää käyttäjien tarpeiden mukaan, mikä tarjoaa käyttäjille räätälöityjä optimointiratkaisuja.",
-    "air_care_helps_3": "3.3D huonenäkymä",
     "air_care_helps_3_content": "Pidä silmällä huoneesi tilaa ja laitteita kotisi yksityiskohtaisen 3D-visualisoinnin avulla.",
     "smart_laundry_key": "Älykäs pesula",
     "smart_laundry_helps": "Smart Laundry tarjoaa asiantuntevia pesuvinkkejä, intuitiivisen pesula-avustajan ja saumattoman pesuainehallinnan, mikä takaa vertaansa vailla olevan pyykinpesukokemuksen",
-    "smart_laundry_helps_1": "1. Räätälöity pesula",
     "smart_laundry_helps_1_content": "Henkilökohtaiset syklit perustuvat käyttäjäprofiileihin ja mieltymyksiin, tunnisteilla eri vuodenaikoina, ulkoilua, vauvanhoitoa ja muuta.",
-    "smart_laundry_helps_2": "2. Pesuaineen hallinta",
     "smart_laundry_helps_2_content": "Optimoi pyykkirutiini Smart Home Laundry Assistantin avulla, tunnista pesuainemerkit automaattisesti ja hallitse pesukoneen annostusta.",
-    "smart_laundry_helps_3": "3.Pyykin käyttöraportti",
     "smart_laundry_helps_3_content": "Näyttää viikoittaiset, kuukausittaiset ja vuosittaiset raportit käyttäjän pyykinpesuohjelman käytöstä sekä kuukauden veden ja sähkön kulutuksen ja rummun puhdistuksen.",
     "smart_kitchen_key": "Älykäs keittiö",
     "smart_kitchen_helps": "Smart Kitchen tarjoaa sinulle ennennäkemättömän älykkään ruoanlaittokokemuksen, mukaan lukien älykkäät reseptit, viiniparit, reseptiavustajat sekä ainesosien, viinien ja juomien hallinnan",
-    "smart_kitchen_helps_1": "1.Kokin resepti",
     "smart_kitchen_helps_1_content": "Koe mestarin reseptit ainutlaatuisissa makuissa eri uuneissa kypsennettynä, jotka noudattavat reseptin valmistusohjeita yhdellä napsautuksella.",
-    "smart_kitchen_helps_2": "2. Reseptiavustaja",
     "smart_kitchen_helps_2_content": "Mukauta ja luo reseptejä henkilökohtaisten mieltymystesi mukaan, mukaan lukien ravitsemus, keittiöt, elämäntavat ja allergiat.",
-    "smart_kitchen_helps_3": "3. Food Management",
     "smart_kitchen_helps_3_content": "Lisää ja tarkastele usein käytettyjen ainesosien tietoja, kuten viimeistä käyttöpäivää. Yhdistä nopeasti sopivat ruokareseptit ja lähetä puuttuvat ainesosat ostoslistalle.",
-    "smart_kitchen_helps_4": "Juomanhallinta",
     "smart_kitchen_helps_4_content": "Lisää juomia ja luo juomalista, katso yksityiskohtaiset tiedot jokaisesta tallennetusta juomasta.",
-    "smart_kitchen_helps_5": "Viini varasto",
     "smart_kitchen_helps_5_content": "Skannaa luodaksesi VIvinon viinikellarilista, aseta muistutuksia optimaalisesta juomaajasta ja suosittele ruokapareja viinityypin perusteella.",
-    "smart_kitchen_helps_6": "6. Ostoslista",
     "smart_kitchen_helps_6_content": "Luo ostoslista reseptin perusteella, merkitse ostosreferenssiksi jo omistamasi ja hankkimasi tuotteet.",
     "smart_support_key": "Älykäs tuki",
     "smart_support_helps": "Smart Support tarjoaa kattavaa apua laitteillesi. Saat puhdistus- ja hoitovinkkejä päivittäiseen huoltoon, yhden napsautuksen itsediagnostiikan tarkistaaksesi kaikkien laitteidesi tilan ja tarjota mahdollisia ratkaisuja kaikkiin epänormaaleihin toimintoihin",
-    "smart_support_helps_1": "1. Puhdistus- ja huoltovinkkejä",
     "smart_support_helps_1_content": "Anna ehdotuksia tuotteen päivittäiseen puhdistukseen ja huoltoon.",
-    "smart_support_helps_2": "2. Yhden napsautuksen itsediagnoosi",
     "smart_support_helps_2_content": "Yhden napsautuksen itsetarkastus ymmärtää kaikkien kodinkoneiden tilan. Kun ongelma havaitaan, tarjoa suositeltuja ratkaisuja.",
-    "smart_support_helps_3": "Vianetsintä",
     "smart_support_helps_3_content": "Kun laitteessa on ongelma, käyttäjät voivat itse auttaa, tehdä vianmäärityksen ja ratkaista ongelman vikaoppaan mukaisesti.",
-    "smart_support_helps_4": "4. Ilmoita ongelmasta",
     "smart_support_helps_4_content": "Jos APP:n tai tuotteen käytössä ilmenee ongelmia, käyttäjät voivat antaa palautetta verkossa lyhentääkseen yhteydenpitoaikaa puhelinkeskuksen kanssa.",
-    "smart_support_helps_5": "5. Ota yhteyttä",
     "smart_support_helps_5_content": "Käyttäjät voivat ottaa meihin yhteyttä puhelimitse, sähköpostitse ja virallisella verkkosivustolla.",
     "block_key": "Lohko",
     "guide_tips_device_1": "Tämä on <b> uusi kotisivu -välilehti. </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "Laite vaatii huomiota.",
     "CL_DV_RF_next_cleaning_will_be": "Seuraava siivous on **",
     "CL_DV_RF_last_clean_was": "Viimeisin siivous oli **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Puhdistus- ja hoitovinkkejä",
     "CL_CF_AS_needs_attention": "Laite vaatii huomiota.",
     "CL_CF_AS_run_normal_condition": "Laitteesi toimii normaalissa kunnossa.",
     "CL_DV_WM_offline_content1": "Tarkista, onko laitteesi kytketty pistorasiaan ja virta on päällä.",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "Erittäin kuuma",
     "CL_CF_HP_card": "Kortti",
     "CL_CF_HP_enter_card_name": "Anna kortin nimi...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Valitse vähintään yksi ainesosa.",
     "CL_CF_FM_no_shopping_items": "Ei ostostuotteita",
     "CL_CF_FM_add_food_from_below": "Lisää ruoka alhaalta",
     "CL_CF_FM_x_has_been_removed": "** on poistettu.",
-    "CL_CF_CO_waiting": "odottaa"
+    "CL_CF_CO_waiting": "odottaa",
+    "CL_CF_HP_delete_card_tips": "Haluatko varmasti poistaa kortin?",
+    "smart_energy_helps_1": "1. Yhden napsautuksen Eco",
+    "smart_energy_helps_2": "2. Energiankulutuksen seuranta",
+    "smart_energy_helps_3": "3. Energia-avustaja",
+    "air_care_helps_1": "1. Ilman arviointi",
+    "smart_laundry_helps_2": "2. Pesuaineen hallinta",
+    "air_care_helps_2": "2. Yhden napsautuksen optimointi",
+    "air_care_helps_3": "3. 3D-huonenäkymä",
+    "smart_laundry_helps_1": "1. Räätälöity pesula",
+    "smart_laundry_helps_3": "3. Pyykin käyttöraportti",
+    "smart_kitchen_helps_1": "1. Kokin resepti",
+    "smart_kitchen_helps_2": "2. Reseptiavustaja",
+    "smart_kitchen_helps_3": "3. Elintarvikkeiden hallinta",
+    "smart_kitchen_helps_4": "4. Juomanhallinta",
+    "smart_kitchen_helps_5": "5. Viini varasto",
+    "smart_kitchen_helps_6": "6. Ostoslista",
+    "smart_support_helps_1": "1. Puhdistus- ja huoltovinkit",
+    "smart_support_helps_2": "2. Yhden napsautuksen itsediagnoosi",
+    "smart_support_helps_4": "4. Ilmoita ongelmasta",
+    "smart_support_helps_5": "5. Ota yhteyttä",
+    "CL_SL_CM_about_usage_month_desc": "Esitetyt tiedot ovat arvioita, eivät tarkkoja mittoja. \\n Arviomme perustuvat kontrolloituihin testeihin, joten todelliset tulokset voivat vaihdella. \\n Todellinen energiankäyttö riippuu erityisestä ympäristöstäsi ja tavoistasi.",
+    "air_care_helps_1_content": "Seuraa kunkin huoneen lämpötilaa ja kosteutta reaaliajassa ja anna mukavuusarvioita ja muistutuksia ilmaston perusteella.",
+    "smart_energy_helps_2_content": "Laske koko talon sähkön- ja vedenkulutus päivittäin, kuukausittain ja vuosittain. Näet myös yksittäisten laitteiden kulutustilastot, kunkin laitteen energiankulutuksen osuuden valitulla ajanjaksolla, kokonais- ja yksittäisen energiankulutuksen.",
+    "smart_support_helps_3": "3. Vianetsintä"
 }
