--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "Tudjon meg többet a Smart Support főbb funkcióiról",
     "smart_energy_helps": "A Smart Energy segít felügyelni és energiatakarékos állapotban tartani az eszközöket",
     "smart_energy_helps_1_content": "A készülékek aktív ECO üzemmódja. Statisztikailag elemezze az eszköz energiafogyasztását. Kövesse nyomon az energiatakarékossági adatokat, és állítsa be az energiahasználati célt.",
-    "smart_energy_helps_2": "2. Energiafogyasztás figyelése",
-    "smart_energy_helps_2_content": "Számítsa ki az egész ház áram- és vízfogyasztását napi, havi és éves alapon. megtekintheti az egyes készülékek fogyasztási statisztikáit, az egyes készülékek energiafogyasztásának arányát a kiválasztott időszakban, a teljes és egyedi energiafogyasztást.",
-    "smart_energy_helps_3": "3.Energia asszisztens",
     "smart_energy_helps_3_content": "Állítson be energiatakarékossági célokat, és küldjön értesítést a felhasználóknak, ha elérte a beállított célértékeket.",
     "air_care_helps": "Az Air Care célja a hőmérséklet, páratartalom és levegő intelligens szabályozásának megoldása az egész házban",
-    "air_care_helps_1": "1. Levegő értékelés",
-    "air_care_helps_1_content": "Valós időben nyomon követheti az egyes helyiségek hőmérsékletét és páratartalmát, valamint komfortértékeléseket és emlékeztetőket biztosíthat a légkondicionálás alapján",
-    "air_care_helps_2": "2.One-click Optimization",
     "air_care_helps_2_content": "Az optimalizálás egy kattintással elindítható. Öt különböző optimalizálási sémát kínálunk. Az egyes optimalizálási módok a felhasználói igényeknek megfelelően állíthatók, így a felhasználók személyre szabott optimalizálási megoldásokat kínálnak.",
-    "air_care_helps_3": "3.3D szoba nézet",
     "air_care_helps_3_content": "Tartsa szemmel szobája állapotát és berendezéseit otthona részletes 3D-s megjelenítésével.",
     "smart_laundry_key": "Intelligens mosoda",
     "smart_laundry_helps": "A Smart Laundry professzionális mosási tippeket, intuitív mosodai asszisztenst és zökkenőmentes mosószer-kezelést kínál, biztosítva a páratlan mosási élményt.",
-    "smart_laundry_helps_1": "1. Egyedi mosoda",
     "smart_laundry_helps_1_content": "Személyre szabott ciklusok a felhasználói profilok és preferenciák alapján, különböző évszakokhoz, szabadtéri tevékenységekhez, babaápoláshoz stb.",
-    "smart_laundry_helps_2": "2. Mosószer-kezelés",
     "smart_laundry_helps_2_content": "Optimalizálja mosási rutinját a Smart Home Laundry Assistant segítségével, automatikusan felismeri a mosószer márkákat, és szabályozza az adagolást a mosógépben.",
-    "smart_laundry_helps_3": "3. Mosodahasználati jelentés",
     "smart_laundry_helps_3_content": "Heti, havi és éves jelentéseket jelenít meg a mosodai program felhasználó általi használatáról, valamint a havi víz- és áramhasználatról, valamint a dob tisztításáról.",
     "smart_kitchen_key": "Okos konyha",
     "smart_kitchen_helps": "A Smart Kitchen példátlan intelligens főzési élményt nyújt Önnek, beleértve az intelligens recepteket, borpárosításokat, receptsegédeket, valamint az összetevők, borok és italok kezelését.",
-    "smart_kitchen_helps_1": "1.Séf recept",
     "smart_kitchen_helps_1_content": "Tapasztalja meg a mester receptjeit egyedi ízekben, ha különböző sütőben sütjük, amelyek egyetlen kattintással követik a recept főzési utasításait.",
-    "smart_kitchen_helps_2": "2. Receptasszisztens",
     "smart_kitchen_helps_2_content": "Személyre szabott és generál recepteket személyes preferenciái alapján, beleértve a táplálkozást, konyhákat, életmódot és allergiákat.",
-    "smart_kitchen_helps_3": "3. Élelmiszer-gazdálkodás",
     "smart_kitchen_helps_3_content": "Adja hozzá és tekintse meg a gyakran használt összetevők részleteit, például a lejárati dátumot. Gyorsan párosítsa a megfelelő ételrecepteket, és elküldje a hiányzó összetevőket a bevásárlólistára.",
-    "smart_kitchen_helps_4": "Monitor",
     "smart_kitchen_helps_4_content": "Adjon hozzá italokat és hozzon létre egy itallistát, tekintse meg minden egyes tárolt ital részletes információit.",
-    "smart_kitchen_helps_5": "Borleltár",
     "smart_kitchen_helps_5_content": "Vivino borospincelistájának szkennelésével állítson be emlékeztetőket az optimális ivási időszakra, és javasoljon ételpárosítást a bor típusa alapján.",
-    "smart_kitchen_helps_6": "6. Bevásárlólista",
     "smart_kitchen_helps_6_content": "A recept alapján állítsa össze a bevásárlólistát, jelölje be vásárlási referenciaként a már birtokolt és megvásárolt termékeket.",
     "smart_support_key": "Intelligens támogatás",
     "smart_support_helps": "Az intelligens támogatás átfogó segítséget nyújt eszközei számára. Tisztítási és ápolási tippeket kaphat a napi karbantartáshoz, egy kattintásos öndiagnosztikát az összes eszköz állapotának ellenőrzéséhez, és lehetséges megoldásokat kínál a rendellenes műveletekre.",
-    "smart_support_helps_1": "1.Tisztítási és karbantartási tippek",
     "smart_support_helps_1_content": "Adjon javaslatokat a termék napi tisztítására és karbantartására.",
-    "smart_support_helps_2": "2. Egykattintásos öndiagnosztika",
     "smart_support_helps_2_content": "Egy kattintással végzett önellenőrzés az összes háztartási készülék állapotának megértéséhez. Ha problémát észlel, javasoljon megoldásokat.",
-    "smart_support_helps_3": "Hibaelhárítás",
     "smart_support_helps_3_content": "Ha a készülék problémába ütközik, a felhasználók a hibaútmutató szerint önsegíthetnek, elháríthatják és megoldhatják a problémát.",
-    "smart_support_helps_4": "4. Probléma bejelentése",
     "smart_support_helps_4_content": "Ha problémák merülnek fel az APP vagy a termék használatával kapcsolatban, a felhasználók online visszajelzést adhatnak, hogy csökkentsék a telefonközponttal való kommunikációs időt.",
-    "smart_support_helps_5": "5. Vegye fel velünk a kapcsolatot",
     "smart_support_helps_5_content": "A felhasználók telefonon, e-mailben és a hivatalos webhelyen keresztül léphetnek kapcsolatba velünk.",
     "block_key": "Tömb",
     "guide_tips_device_1": "Ez az <b> új kezdőlap lap. </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "A készülék figyelmet igényel.",
     "CL_DV_RF_next_cleaning_will_be": "A következő takarítás **",
     "CL_DV_RF_last_clean_was": "Az utolsó takarítás **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Tisztítási és ápolási tippek",
     "CL_CF_AS_needs_attention": "A készülék figyelmet igényel.",
     "CL_CF_AS_run_normal_condition": "A készülék normál állapotban működik.",
     "CL_DV_WM_offline_content1": "Ellenőrizze, hogy a készülék csatlakozik-e és be van-e kapcsolva az áram.",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "Extra meleg",
     "CL_CF_HP_card": "Kártya",
     "CL_CF_HP_enter_card_name": "Írja be a kártya nevét...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Kérjük, válasszon legalább egy összetevőt.",
     "CL_CF_FM_no_shopping_items": "Nincsenek vásárlási cikkek",
     "CL_CF_FM_add_food_from_below": "Adjon hozzá ételt alulról",
     "CL_CF_FM_x_has_been_removed": "** eltávolítva.",
-    "CL_CF_CO_waiting": "várakozás"
+    "CL_CF_CO_waiting": "várakozás",
+    "CL_CF_HP_delete_card_tips": "Biztosan törli a kártyát?",
+    "smart_energy_helps_1": "1. Egy kattintásos Eco",
+    "smart_energy_helps_2": "2. Energiafogyasztás monitorozása",
+    "smart_energy_helps_3": "3. Energy Assistant",
+    "air_care_helps_1": "1. Levegő értékelés",
+    "smart_laundry_helps_2": "2. Mosószer-kezelés",
+    "air_care_helps_2": "2. Optimalizálás egy kattintással",
+    "air_care_helps_3": "3. 3D szoba nézet",
+    "smart_laundry_helps_1": "1. Egyedi mosoda",
+    "smart_laundry_helps_3": "3. Mosodahasználati jelentés",
+    "smart_kitchen_helps_1": "1. Szakács recept",
+    "smart_kitchen_helps_2": "2. Receptasszisztens",
+    "smart_kitchen_helps_3": "3. Élelmiszer-gazdálkodás",
+    "smart_kitchen_helps_4": "4. Monitor",
+    "smart_kitchen_helps_5": "5. Borleltár",
+    "smart_kitchen_helps_6": "6. Bevásárlólista",
+    "smart_support_helps_1": "1. Tisztítási és karbantartási tippek",
+    "smart_support_helps_2": "2. Egykattintásos öndiagnosztika",
+    "smart_support_helps_4": "4. Probléma bejelentése",
+    "smart_support_helps_5": "5. Vegye fel velünk a kapcsolatot",
+    "CL_SL_CM_about_usage_month_desc": "A megjelenített adatok becslések, nem pontos mérések. \\n Becsléseink ellenőrzött teszteken alapulnak, így a tényleges eredmények eltérhetnek. \\n A valós világ energiafelhasználása az Ön konkrét környezetétől és szokásaitól függ.",
+    "air_care_helps_1_content": "Valós időben nyomon követheti az egyes helyiségek hőmérsékletét és páratartalmát, és a légkondicionálás alapján kényelmi értékeléseket és emlékeztetőket készíthet.",
+    "smart_energy_helps_2_content": "Számítsa ki az egész ház áram- és vízfogyasztását napi, havi és éves alapon. Megtekintheti továbbá az egyes készülékek fogyasztási statisztikáit, az egyes készülékek energiafogyasztásának arányát a kiválasztott időszakban, az össz- és egyedi energiafogyasztást.",
+    "smart_support_helps_3": "3. Hibaelhárítás"
 }
