--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "Leer meer over de belangrijkste functies van Smart Support",
     "smart_energy_helps": "Smart Energy helpt u apparaten te monitoren en energiezuinig te houden",
     "smart_energy_helps_1_content": "Actieve ECO-modus van uw apparaten. Analyseer statistisch het energieverbruik van het apparaat. Controleer energiebesparingsgegevens en stel een energiegebruiksdoel in.",
-    "smart_energy_helps_2": "2. Energieverbruiksbewaking",
-    "smart_energy_helps_2_content": "Bereken het totale stroom- en waterverbruik van uw huis op dag-, maand- en jaarbasis. U kunt ook de verbruiksstatistieken van afzonderlijke apparaten bekijken, het aandeel energieverbruik van elk apparaat binnen de geselecteerde periode, en het totale en afzonderlijke energieverbruik.",
-    "smart_energy_helps_3": "3. Energie-assistent",
     "smart_energy_helps_3_content": "Stel doelen voor energiebesparing in en stuur meldingen naar gebruikers wanneer de ingestelde doelwaarden zijn bereikt.",
     "air_care_helps": "Luchtverzorging is gericht op het intelligent regelen van temperatuur, vochtigheid en lucht in het hele huis",
-    "air_care_helps_1": "1. Luchtevaluatie",
-    "air_care_helps_1_content": "Controleer de temperatuur en vochtigheidsstatus van elke kamer in realtime en geef comfortbeoordelingen en herinneringen op basis van de airconditioningconditie",
-    "air_care_helps_2": "2. Optimalisatie met één klik",
     "air_care_helps_2_content": "Optimalisatie kan met één klik worden gestart. Wij bieden vijf verschillende optimalisatieschema's. Elke optimalisatiemodus kan worden aangepast aan de behoeften van de gebruiker, waardoor gebruikers aangepaste optimalisatieoplossingen krijgen.",
-    "air_care_helps_3": "3.3D kamerweergave",
     "air_care_helps_3_content": "Houd de status van uw kamer en apparaten in de gaten via een gedetailleerde 3D-visualisatie van uw huis.",
     "smart_laundry_key": "Slimme was",
     "smart_laundry_helps": "Smart Laundry biedt deskundige wastips, een intuïtieve wasassistent en naadloos wasmiddelbeheer, wat zorgt voor een ongeëvenaarde waservaring",
-    "smart_laundry_helps_1": "1. Aangepaste wasruimte",
     "smart_laundry_helps_1_content": "Gepersonaliseerde cycli op basis van gebruikersprofielen en voorkeuren, met tags voor verschillende seizoenen, buitenactiviteiten, babyverzorging en meer.",
-    "smart_laundry_helps_2": "2. Wasmiddelbeheer",
     "smart_laundry_helps_2_content": "Optimaliseer uw wasroutine met Smart Home Laundry Assistant, die automatisch wasmiddelmerken herkent en de dosering in uw wasmachine beheert.",
-    "smart_laundry_helps_3": "3. Rapport over wasgebruik",
     "smart_laundry_helps_3_content": "Geeft wekelijkse, maandelijkse en jaarlijkse rapporten weer over het gebruik van het wasprogramma door de gebruiker, evenals het water- en elektriciteitsverbruik en de trommelreiniging van de maand.",
     "smart_kitchen_key": "Slimme keuken",
     "smart_kitchen_helps": "Smart Kitchen biedt u een ongekende intelligente kookervaring, inclusief intelligente recepten, wijncombinaties, receptassistenten en beheer van ingrediënten, wijn en dranken",
-    "smart_kitchen_helps_1": "1. Chef-recept",
     "smart_kitchen_helps_1_content": "Ervaar de unieke smaken van meesterrecepten bereid in verschillende ovens, waarbij u met één klik de kookinstructies van het recept volgt.",
-    "smart_kitchen_helps_2": "2.Receptenassistent",
     "smart_kitchen_helps_2_content": "Pas recepten aan en genereer ze op basis van uw persoonlijke voorkeuren, zoals voeding, keuken, levensstijl en allergieën.",
-    "smart_kitchen_helps_3": "3. Voedselbeheer",
     "smart_kitchen_helps_3_content": "Voeg veelgebruikte ingrediëntendetails toe en bekijk ze, zoals de houdbaarheidsdatum. Koppel snel geschikte voedselrecepten en stuur ontbrekende ingrediënten naar de boodschappenlijst.",
-    "smart_kitchen_helps_4": "Beheer drank",
     "smart_kitchen_helps_4_content": "Voeg drankjes toe en maak een dranklijst. Bekijk gedetailleerde informatie over elk opgeslagen drankje.",
-    "smart_kitchen_helps_5": "Wijn lijst",
     "smart_kitchen_helps_5_content": "Scan om een wijnkelderlijst van VIvino samen te stellen, stel herinneringen in voor de optimale drinkperiode en geef aanbevelingen voor bijpassende gerechten op basis van het type wijn.",
-    "smart_kitchen_helps_6": "6. Boodschappenlijstje",
     "smart_kitchen_helps_6_content": "Maak een boodschappenlijstje op basis van het recept en markeer de artikelen die u al bezit en hebt aangeschaft als winkelreferentie.",
     "smart_support_key": "Slimme ondersteuning",
     "smart_support_helps": "Smart Support biedt uitgebreide assistentie voor uw apparaten. U kunt reinigings- en verzorgingstips krijgen voor dagelijks onderhoud, een one-click zelfdiagnose om de status van al uw apparaten te controleren en mogelijke oplossingen bieden voor abnormale handelingen",
-    "smart_support_helps_1": "1. Tips voor reiniging en onderhoud",
     "smart_support_helps_1_content": "Geef suggesties voor de dagelijkse reiniging en het onderhoud van het product.",
-    "smart_support_helps_2": "2. Zelfdiagnose met één klik",
     "smart_support_helps_2_content": "Zelfinspectie met één klik om de status van alle huishoudelijke apparaten te begrijpen. Wanneer een probleem wordt gedetecteerd, worden aanbevolen oplossingen geboden.",
-    "smart_support_helps_3": "Probleemoplossing",
     "smart_support_helps_3_content": "Wanneer er een probleem met het apparaat is, kunnen gebruikers zelf het probleem oplossen met behulp van de handleiding voor het oplossen van problemen.",
-    "smart_support_helps_4": "4. Probleem melden",
     "smart_support_helps_4_content": "Als er problemen zijn met de APP of het productgebruik, kunnen gebruikers online feedback geven om de communicatietijd met het callcenter te verkorten.",
-    "smart_support_helps_5": "5. Neem contact met ons op",
     "smart_support_helps_5_content": "Gebruikers kunnen contact met ons opnemen via telefoon, e-mail en de officiële website.",
     "block_key": "Blok",
     "guide_tips_device_1": "Dit is het <b> nieuwe tabblad van de startpagina. </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "Het apparaat heeft aandacht nodig.",
     "CL_DV_RF_next_cleaning_will_be": "Volgende schoonmaak is **",
     "CL_DV_RF_last_clean_was": "Laatste schoonmaak was **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Reinigings- en verzorgingstips",
     "CL_CF_AS_needs_attention": "Het apparaat heeft aandacht nodig.",
     "CL_CF_AS_run_normal_condition": "Uw apparaat functioneert normaal.",
     "CL_DV_WM_offline_content1": "Controleer of je wijnkast aangesloten is en of de stroom is ingeschakeld",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "Extra heet",
     "CL_CF_HP_card": "Kaart",
     "CL_CF_HP_enter_card_name": "Voer kaartnaam in...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Selecteer minimaal één ingrediënt.",
     "CL_CF_FM_no_shopping_items": "Geen winkelartikelen",
     "CL_CF_FM_add_food_from_below": "Voeg voedsel van onderen toe",
     "CL_CF_FM_x_has_been_removed": "** is verwijderd.",
-    "CL_CF_CO_waiting": "wachten"
+    "CL_CF_CO_waiting": "wachten",
+    "CL_CF_HP_delete_card_tips": "Weet u zeker dat u de kaart wilt verwijderen?",
+    "smart_energy_helps_1": "1. Eén-klik-eco",
+    "smart_energy_helps_2": "2. Energieverbruiksbewaking",
+    "smart_energy_helps_3": "3. Energie-assistent",
+    "air_care_helps_1": "1. Luchtbeoordeling",
+    "smart_laundry_helps_2": "2. Wasmiddelbeheer",
+    "air_care_helps_2": "2. Optimalisatie met één klik",
+    "air_care_helps_3": "3. 3D-kamerweergave",
+    "smart_laundry_helps_1": "1. Aangepaste was",
+    "smart_laundry_helps_3": "3. Rapport over wasgebruik",
+    "smart_kitchen_helps_1": "1. Chef-recept",
+    "smart_kitchen_helps_2": "2. Receptassistent",
+    "smart_kitchen_helps_3": "3. Voedselbeheer",
+    "smart_kitchen_helps_4": "4. Beheer drank",
+    "smart_kitchen_helps_5": "5. Wijn lijst",
+    "smart_kitchen_helps_6": "6. Boodschappenlijstje",
+    "smart_support_helps_1": "1. Tips voor reiniging en onderhoud",
+    "smart_support_helps_2": "2. Zelfdiagnose met één klik",
+    "smart_support_helps_4": "4. Probleem melden",
+    "smart_support_helps_5": "5. Neem contact met ons op",
+    "CL_SL_CM_about_usage_month_desc": "De getoonde gegevens zijn schattingen en geen exacte metingen. \\n Onze schattingen zijn gebaseerd op gecontroleerde tests, dus uw werkelijke resultaten kunnen afwijken. \\n Het werkelijke energieverbruik is afhankelijk van uw specifieke omgeving en gewoonten.",
+    "air_care_helps_1_content": "Houd de temperatuur en de luchtvochtigheid in elke kamer in realtime in de gaten en geef comfortbeoordelingen en herinneringen op basis van de airconditioningconditie.",
+    "smart_energy_helps_2_content": "Bereken het totale stroom- en waterverbruik van het huis op dagelijkse, maandelijkse en jaarlijkse basis. U kunt ook de verbruiksstatistieken van individuele apparaten bekijken, het aandeel energieverbruik van elk apparaat binnen de geselecteerde periode, het totale en individuele energieverbruik.",
+    "smart_support_helps_3": "3. Probleemoplossing"
 }
