--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "Dowiedz się więcej o kluczowych funkcjach Smart Support",
     "smart_energy_helps": "Smart Energy pomaga monitorować i utrzymywać urządzenia w stanie energooszczędnym",
     "smart_energy_helps_1_content": "Aktywny tryb ECO Twoich urządzeń. Statystyczna analiza zużycia energii przez urządzenie. Monitorowanie danych o oszczędzaniu energii i ustawianie celu zużycia energii.",
-    "smart_energy_helps_2": "2.Monitorowanie zużycia energii",
-    "smart_energy_helps_2_content": "Oblicz zużycie energii elektrycznej i wody w całym domu w ujęciu dziennym, miesięcznym i rocznym. Możesz także przeglądać statystyki zużycia poszczególnych urządzeń, udział zużycia energii każdego urządzenia w wybranym okresie, a także całkowite i indywidualne zużycie energii.",
-    "smart_energy_helps_3": "3.Asystent energetyczny",
     "smart_energy_helps_3_content": "Ustaw cele dotyczące oszczędzania energii i wysyłaj powiadomienia do użytkowników po osiągnięciu ustalonych wartości docelowych.",
     "air_care_helps": "Air care ma na celu rozwiązanie problemu inteligentnej kontroli temperatury, wilgotności i powietrza w całym domu",
-    "air_care_helps_1": "1.Ocena powietrza",
-    "air_care_helps_1_content": "Monitoruj stan temperatury i wilgotności w każdym pomieszczeniu w czasie rzeczywistym oraz zapewnij ocenę komfortu i przypomnienia na podstawie stanu klimatyzacji",
-    "air_care_helps_2": "2. Optymalizacja jednym kliknięciem",
     "air_care_helps_2_content": "Optymalizację można rozpocząć jednym kliknięciem. Oferujemy pięć różnych schematów optymalizacji. Każdy tryb optymalizacji można dostosować do potrzeb użytkownika, zapewniając użytkownikom dostosowane rozwiązania optymalizacyjne.",
-    "air_care_helps_3": "Widok pokoju 3.3D",
     "air_care_helps_3_content": "Kontroluj stan pomieszczeń i sprzętów AGD dzięki szczegółowej wizualizacji 3D swojego domu.",
     "smart_laundry_key": "Inteligentne pranie",
     "smart_laundry_helps": "Smart Laundry oferuje fachowe porady dotyczące prania, intuicyjnego asystenta prania i bezproblemowe zarządzanie detergentami, zapewniając niezrównane doświadczenie prania",
-    "smart_laundry_helps_1": "1. Pralnia dostosowana do potrzeb klienta",
     "smart_laundry_helps_1_content": "Spersonalizowane cykle oparte na profilach i preferencjach użytkowników, z tagami dotyczącymi różnych pór roku, aktywności na świeżym powietrzu, pielęgnacji dziecka i nie tylko.",
-    "smart_laundry_helps_2": "2. Zarządzanie detergentami",
     "smart_laundry_helps_2_content": "Zoptymalizuj codzienne pranie dzięki aplikacji Smart Home Laundry Assistant, która automatycznie rozpoznaje marki detergentów i zarządza dozowaniem w pralce.",
-    "smart_laundry_helps_3": "3. Raport o użytkowaniu pralni",
     "smart_laundry_helps_3_content": "Wyświetla tygodniowe, miesięczne i roczne raporty dotyczące korzystania przez użytkownika z programu prania, a także miesięczne zużycie wody i prądu oraz czyszczenie bębna.",
     "smart_kitchen_key": "Inteligentna kuchnia",
     "smart_kitchen_helps": "Smart Kitchen zapewnia niespotykane dotąd inteligentne doświadczenie kulinarne, w tym inteligentne przepisy, dobór win, asystentów przepisów oraz zarządzanie składnikami, winem i napojami",
-    "smart_kitchen_helps_1": "1.Przepis szefa kuchni",
     "smart_kitchen_helps_1_content": "Odkryj wyjątkowe smaki przepisów mistrzów, gotowanych w różnych piekarnikach, które po prostu podążają za instrukcją przygotowania za pomocą jednego kliknięcia.",
-    "smart_kitchen_helps_2": "2.Asystent przepisów",
     "smart_kitchen_helps_2_content": "Dostosuj i generuj przepisy w oparciu o swoje osobiste preferencje, biorąc pod uwagę odżywianie, kuchnię, styl życia i alergie.",
-    "smart_kitchen_helps_3": "3.Zarządzanie żywnością",
     "smart_kitchen_helps_3_content": "Dodawaj i przeglądaj często używane szczegóły składników, takie jak data ważności. Szybko dopasuj odpowiednie przepisy kulinarne i wyślij brakujące składniki na listę zakupów.",
-    "smart_kitchen_helps_4": "Zarządzanie napojami",
     "smart_kitchen_helps_4_content": "Dodawaj napoje i twórz listy napojów, przeglądaj szczegółowe informacje o każdym zapisanym napoju.",
-    "smart_kitchen_helps_5": "Wino spis",
     "smart_kitchen_helps_5_content": "Zeskanuj, aby utworzyć listę win w piwnicy dzięki VIvino, ustaw przypomnienia o optymalnym czasie spożycia wina i zalecaj łączenie potraw z konkretnym rodzajem wina.",
-    "smart_kitchen_helps_6": "6. Lista zakupów",
     "smart_kitchen_helps_6_content": "Wygeneruj listę zakupów na podstawie przepisu, zaznaczając produkty, które już posiadasz i które kupiłeś, jako punkty odniesienia w zakupach.",
     "smart_support_key": "Inteligentne wsparcie",
     "smart_support_helps": "Smart Support zapewnia kompleksową pomoc dla Twoich urządzeń. Możesz uzyskać wskazówki dotyczące czyszczenia i pielęgnacji w celu codziennej konserwacji, samodiagnostykę jednym kliknięciem, aby sprawdzić stan wszystkich urządzeń i zapewnić możliwe rozwiązania dla wszelkich nieprawidłowych operacji.",
-    "smart_support_helps_1": "1. Wskazówki dotyczące czyszczenia i konserwacji",
     "smart_support_helps_1_content": "Podaj sugestie dotyczące codziennego czyszczenia i konserwacji produktu.",
-    "smart_support_helps_2": "2.Jedno kliknięcie samodiagnozy",
     "smart_support_helps_2_content": "Samodzielna inspekcja jednym kliknięciem, aby poznać stan wszystkich urządzeń gospodarstwa domowego. Gdy zostanie wykryty problem, podaj zalecane rozwiązania.",
-    "smart_support_helps_3": "Rozwiązywanie problemów",
     "smart_support_helps_3_content": "Gdy wystąpi problem z urządzeniem, użytkownicy mogą sami poszukać pomocy, zdiagnozować problem i rozwiązać go korzystając z przewodnika po usterkach.",
-    "smart_support_helps_4": "4. Zgłoś problem",
     "smart_support_helps_4_content": "Jeśli wystąpią problemy z aplikacją lub użytkowaniem produktu, użytkownicy mogą zgłosić je online, co skróci czas kontaktu z centrum obsługi telefonicznej.",
-    "smart_support_helps_5": "5. Skontaktuj się z nami",
     "smart_support_helps_5_content": "Użytkownicy mogą się z nami kontaktować telefonicznie, za pośrednictwem poczty elektronicznej oraz oficjalnej strony internetowej.",
     "block_key": "Blok",
     "guide_tips_device_1": "To jest <b> nowa zakładka strony głównej. </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "Urządzenie wymaga uwagi.",
     "CL_DV_RF_next_cleaning_will_be": "Następne sprzątanie będzie **",
     "CL_DV_RF_last_clean_was": "Ostatnie sprzątanie było **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Wskazówki dotyczące czyszczenia i pielęgnacji",
     "CL_CF_AS_needs_attention": "Urządzenie wymaga uwagi.",
     "CL_CF_AS_run_normal_condition": "Twoje urządzenie działa normalnie.",
     "CL_DV_WM_offline_content1": "Sprawdź, czy urządzenie jest podłączone do prądu i czy zasilanie jest włączone.",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "Bardzo gorąco",
     "CL_CF_HP_card": "Karta",
     "CL_CF_HP_enter_card_name": "Wprowadź nazwę karty...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Proszę wybrać co najmniej jeden składnik.",
     "CL_CF_FM_no_shopping_items": "Brak zakupów",
     "CL_CF_FM_add_food_from_below": "Dodaj jedzenie od dołu",
     "CL_CF_FM_x_has_been_removed": "** zostało usunięte.",
-    "CL_CF_CO_waiting": "czekanie"
+    "CL_CF_CO_waiting": "czekanie",
+    "CL_CF_HP_delete_card_tips": "Czy na pewno chcesz usunąć kartę?",
+    "smart_energy_helps_1": "1. Eko za pomocą jednego kliknięcia",
+    "smart_energy_helps_2": "2. Monitorowanie zużycia energii",
+    "smart_energy_helps_3": "3. Asystent energetyczny",
+    "air_care_helps_1": "1. Ocena powietrza",
+    "smart_laundry_helps_2": "2. Zarządzanie detergentami",
+    "air_care_helps_2": "2. Optymalizacja jednym kliknięciem",
+    "air_care_helps_3": "3. Widok pokoju 3D",
+    "smart_laundry_helps_1": "1. Pralnia na zamówienie",
+    "smart_laundry_helps_3": "3. Raport o użytkowaniu pralni",
+    "smart_kitchen_helps_1": "1. Przepis szefa kuchni",
+    "smart_kitchen_helps_2": "2. Asystent przepisów",
+    "smart_kitchen_helps_3": "3. Zarządzanie żywnością",
+    "smart_kitchen_helps_4": "4. Zarządzanie napojami",
+    "smart_kitchen_helps_5": "5. Wino spis",
+    "smart_kitchen_helps_6": "6. Lista zakupów",
+    "smart_support_helps_1": "1. Wskazówki dotyczące czyszczenia i konserwacji",
+    "smart_support_helps_2": "2. Samodiagnoza jednym kliknięciem",
+    "smart_support_helps_4": "4. Zgłoś problem",
+    "smart_support_helps_5": "5. Skontaktuj się z nami",
+    "CL_SL_CM_about_usage_month_desc": "Przedstawione dane mają charakter szacunkowy, a nie dokładnych pomiarów. \\n Nasze szacunki opierają się na kontrolowanych testach, więc rzeczywiste wyniki mogą być inne. \\n Rzeczywiste zużycie energii zależy od konkretnego środowiska i nawyków.",
+    "air_care_helps_1_content": "Monitoruj stan temperatury i wilgotności w każdym pomieszczeniu w czasie rzeczywistym i dokonuj ocen komfortu oraz wysyłaj przypomnienia na podstawie stanu klimatyzacji.",
+    "smart_energy_helps_2_content": "Oblicz zużycie energii elektrycznej i wody w całym domu na podstawie dziennej, miesięcznej i rocznej. Możesz również przeglądać statystyki zużycia poszczególnych urządzeń, proporcje zużycia energii każdego urządzenia w wybranym okresie, ogólne i indywidualne zużycie energii.",
+    "smart_support_helps_3": "3. Rozwiązywanie problemów"
 }
