--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "เรียนรู้เพิ่มเติมเกี่ยวกับคุณสมบัติหลักของ Smart Support",
     "smart_energy_helps": "Smart Energy ช่วยให้คุณตรวจสอบและรักษาอุปกรณ์ให้อยู่ในสถานะประหยัดพลังงาน",
     "smart_energy_helps_1_content": "โหมด ECO ของเครื่องใช้ไฟฟ้าของคุณ วิเคราะห์การใช้พลังงานของอุปกรณ์อย่างมีสถิติ ตรวจสอบข้อมูลการประหยัดพลังงานและกำหนดเป้าหมายการใช้พลังงาน",
-    "smart_energy_helps_2": "2.การติดตามการใช้พลังงาน",
-    "smart_energy_helps_2_content": "คำนวณการใช้ไฟฟ้าและน้ำของทั้งบ้านเป็นรายวัน รายเดือน และรายปี นอกจากนี้คุณยังสามารถดูสถิติการใช้ไฟฟ้าของแต่ละอุปกรณ์ สัดส่วนการใช้พลังงานของแต่ละอุปกรณ์ภายในระยะเวลาที่เลือก และการใช้พลังงานโดยรวมและแต่ละรายการได้อีกด้วย",
-    "smart_energy_helps_3": "3.ผู้ช่วยด้านพลังงาน",
     "smart_energy_helps_3_content": "กำหนดเป้าหมายการประหยัดพลังงาน และส่งการแจ้งเตือนให้ผู้ใช้เมื่อถึงค่าเป้าหมายที่ตั้งไว้",
     "air_care_helps": "Air care มุ่งแก้ปัญหาการควบคุมอุณหภูมิ ความชื้น และอากาศภายในบ้านอย่างชาญฉลาด",
-    "air_care_helps_1": "1.การประเมินอากาศ",
-    "air_care_helps_1_content": "ตรวจสอบสถานะอุณหภูมิและความชื้นของแต่ละห้องแบบเรียลไทม์ และให้การประเมินและเตือนความสบายตามสภาพอากาศ",
-    "air_care_helps_2": "2. การเพิ่มประสิทธิภาพเพียงคลิกเดียว",
     "air_care_helps_2_content": "สามารถเริ่มการเพิ่มประสิทธิภาพได้ด้วยการคลิกเพียงครั้งเดียว เรามีรูปแบบการเพิ่มประสิทธิภาพให้เลือกถึง 5 แบบ โดยแต่ละโหมดการเพิ่มประสิทธิภาพสามารถปรับเปลี่ยนได้ตามความต้องการของผู้ใช้ ช่วยให้ผู้ใช้ได้รับโซลูชันการเพิ่มประสิทธิภาพที่ปรับแต่งได้ตามความต้องการ",
-    "air_care_helps_3": "มุมมองห้องแบบ 3.3D",
     "air_care_helps_3_content": "คอยดูสถานะห้องและเครื่องใช้ไฟฟ้าของคุณผ่านการแสดงภาพ 3 มิติโดยละเอียดของบ้านของคุณ",
     "smart_laundry_key": "สมาร์ท ซักอบรีด",
     "smart_laundry_helps": "Smart Laundry นำเสนอเคล็ดลับการซักผ้าจากผู้เชี่ยวชาญ ผู้ช่วยซักผ้าที่ใช้งานง่าย และการจัดการผงซักฟอกที่ราบรื่น รับประกันประสบการณ์การซักผ้าที่ไม่มีใครเทียบได้",
-    "smart_laundry_helps_1": "1.บริการซักรีดตามสั่ง",
     "smart_laundry_helps_1_content": "วงจรส่วนบุคคลตามโปรไฟล์และความชอบของผู้ใช้พร้อมแท็กสำหรับฤดูกาลต่างๆ กิจกรรมกลางแจ้ง การดูแลเด็ก และอื่นๆ อีกมากมาย",
-    "smart_laundry_helps_2": "2.การจัดการผงซักฟอก",
     "smart_laundry_helps_2_content": "เพิ่มประสิทธิภาพกิจวัตรซักผ้าของคุณด้วยผู้ช่วยซักผ้าอัจฉริยะ จดจำยี่ห้อผงซักฟอกและจัดการปริมาณผ้าในเครื่องซักผ้าของคุณโดยอัตโนมัติ",
-    "smart_laundry_helps_3": "3.รายงานการใช้ผ้าซัก",
     "smart_laundry_helps_3_content": "แสดงรายงานรายสัปดาห์ รายเดือน และรายปีเกี่ยวกับการใช้โปรแกรมซักผ้าของผู้ใช้ รวมถึงการใช้น้ำและไฟฟ้ารายเดือน และการทำความสะอาดถังซัก",
     "smart_kitchen_key": "ครัวอัจฉริยะ",
     "smart_kitchen_helps": "Smart Kitchen มอบประสบการณ์การทำอาหารอัจฉริยะที่ไม่เคยมีมาก่อน รวมไปถึงสูตรอาหารอัจฉริยะ การจับคู่ไวน์ ผู้ช่วยสูตรอาหาร และการจัดการส่วนผสม ไวน์ และเครื่องดื่ม",
-    "smart_kitchen_helps_1": "1.สูตรอาหารจากเชฟ",
     "smart_kitchen_helps_1_content": "สัมผัสกับสูตรอาหารจากผู้เชี่ยวชาญที่มีรสชาติที่เป็นเอกลักษณ์เมื่อปรุงในเตาอบที่แตกต่างกัน ซึ่งทำตามคำแนะนำการปรุงอาหารของสูตรด้วยการคลิกเพียงครั้งเดียว",
-    "smart_kitchen_helps_2": "2.ผู้ช่วยสูตรอาหาร",
     "smart_kitchen_helps_2_content": "ปรับแต่งและสร้างสูตรอาหารตามความชอบส่วนตัวของคุณ รวมถึงโภชนาการ อาหาร ไลฟ์สไตล์ และอาการแพ้",
-    "smart_kitchen_helps_3": "3.การจัดการด้านอาหาร",
     "smart_kitchen_helps_3_content": "เพิ่มและดูรายละเอียดส่วนผสมที่ใช้บ่อย เช่น วันหมดอายุ จับคู่สูตรอาหารที่เหมาะสมและส่งส่วนผสมที่ขาดหายไปไปยังรายการซื้อของได้อย่างรวดเร็ว",
-    "smart_kitchen_helps_4": "จอภาพ",
     "smart_kitchen_helps_4_content": "เพิ่มเครื่องดื่มและสร้างรายการดื่ม ดูข้อมูลโดยละเอียดของเครื่องดื่มที่เก็บไว้แต่ละรายการ",
-    "smart_kitchen_helps_5": "สินค้าคงคลังไวน์",
     "smart_kitchen_helps_5_content": "สแกนเพื่อสร้างรายการห้องเก็บไวน์โดย VIvino ตั้งการแจ้งเตือนสำหรับช่วงเวลาการดื่มที่เหมาะสมที่สุด และแนะนำการจับคู่กับอาหารตามประเภทของไวน์",
-    "smart_kitchen_helps_6": "6.รายการซื้อของ",
     "smart_kitchen_helps_6_content": "สร้างรายการซื้อของตามสูตร ทำเครื่องหมายสินค้าที่คุณเป็นเจ้าของและซื้อมาเป็นข้อมูลอ้างอิงในการช้อปปิ้งของคุณ",
     "smart_support_key": "การสนับสนุนอันชาญฉลาด",
     "smart_support_helps": "Smart Support ให้ความช่วยเหลือที่ครอบคลุมสำหรับอุปกรณ์ของคุณ คุณสามารถรับคำแนะนำในการทำความสะอาดและการดูแลสำหรับการบำรุงรักษาประจำวัน การวินิจฉัยด้วยตนเองเพียงคลิกเดียวเพื่อตรวจสอบสถานะของอุปกรณ์ทั้งหมดของคุณ และเสนอแนวทางแก้ไขที่เป็นไปได้สำหรับการทำงานที่ผิดปกติใดๆ",
-    "smart_support_helps_1": "1.เคล็ดลับการทำความสะอาดและการบำรุงรักษา",
     "smart_support_helps_1_content": "ให้คำแนะนำการทำความสะอาดและการดูแลรักษาผลิตภัณฑ์ในแต่ละวัน",
-    "smart_support_helps_2": "2.การวินิจฉัยตนเองด้วยการคลิกเพียงครั้งเดียว",
     "smart_support_helps_2_content": "ตรวจสอบด้วยตนเองเพียงคลิกเดียวเพื่อทราบสถานะของเครื่องใช้ไฟฟ้าภายในบ้านทั้งหมด เมื่อตรวจพบปัญหา ให้เสนอวิธีแก้ไขที่แนะนำ",
-    "smart_support_helps_3": "การแก้ไขปัญหา",
     "smart_support_helps_3_content": "เมื่ออุปกรณ์ประสบปัญหา ผู้ใช้สามารถช่วยเหลือตัวเอง แก้ไขปัญหา และแก้ไขปัญหาตามคำแนะนำเกี่ยวกับข้อผิดพลาดได้",
-    "smart_support_helps_4": "4.รายงานปัญหา",
     "smart_support_helps_4_content": "หากมีปัญหาเกี่ยวกับการใช้งาน APP หรือผลิตภัณฑ์ ผู้ใช้สามารถตอบกลับออนไลน์เพื่อลดเวลาในการสื่อสารกับศูนย์บริการ",
-    "smart_support_helps_5": "5.ติดต่อเรา",
     "smart_support_helps_5_content": "ผู้ใช้สามารถติดต่อเราได้ผ่านทางโทรศัพท์, อีเมล์ และเว็บไซต์อย่างเป็นทางการ",
     "block_key": "ปิดกั้น",
     "guide_tips_device_1": "นี่คือ <b> แท็บหน้าแรกใหม่ </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "อุปกรณ์ต้องได้รับความใส่ใจ",
     "CL_DV_RF_next_cleaning_will_be": "การทำความสะอาดครั้งต่อไปจะ**",
     "CL_DV_RF_last_clean_was": "ทำความสะอาดครั้งสุดท้ายคือ **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "เคล็ดลับการทำความสะอาดและการดูแล",
     "CL_CF_AS_needs_attention": "อุปกรณ์ต้องได้รับความใส่ใจ",
     "CL_CF_AS_run_normal_condition": "อุปกรณ์ของคุณทำงานในสภาพปกติ",
     "CL_DV_WM_offline_content1": "ตรวจสอบว่าเครื่องใช้ของคุณได้ถูกเสียบปลั๊กและเปิดไฟอยู่หรือไม่",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "พิเศษร้อน",
     "CL_CF_HP_card": "การ์ด",
     "CL_CF_HP_enter_card_name": "กรอกชื่อบัตร...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "กรุณาเลือกส่วนผสมอย่างน้อยหนึ่งรายการ",
     "CL_CF_FM_no_shopping_items": "ไม่มีรายการช้อปปิ้ง",
     "CL_CF_FM_add_food_from_below": "เพิ่มอาหารจากด้านล่าง",
     "CL_CF_FM_x_has_been_removed": "** ได้ถูกลบออกไปแล้ว",
-    "CL_CF_CO_waiting": "ซึ่งรอคอย"
+    "CL_CF_CO_waiting": "ซึ่งรอคอย",
+    "CL_CF_HP_delete_card_tips": "คุณแน่ใจว่าต้องการลบบัตรหรือไม่?",
+    "smart_energy_helps_1": "1. Eco เพียงคลิกเดียว",
+    "smart_energy_helps_2": "2. การติดตามการใช้พลังงาน",
+    "smart_energy_helps_3": "3. ผู้ช่วยด้านพลังงาน",
+    "air_care_helps_1": "1. การประเมินอากาศ",
+    "smart_laundry_helps_2": "2. การจัดการผงซักฟอก",
+    "air_care_helps_2": "2. การเพิ่มประสิทธิภาพด้วยการคลิกเพียงครั้งเดียว",
+    "air_care_helps_3": "3. มุมมองห้องแบบ 3 มิติ",
+    "smart_laundry_helps_1": "1. บริการซักรีดตามสั่ง",
+    "smart_laundry_helps_3": "3. รายงานการใช้ผ้าซัก",
+    "smart_kitchen_helps_1": "1.สูตรของเชฟ",
+    "smart_kitchen_helps_2": "2. ผู้ช่วยสูตรอาหาร",
+    "smart_kitchen_helps_3": "3. การจัดการด้านอาหาร",
+    "smart_kitchen_helps_4": "4. จอภาพ",
+    "smart_kitchen_helps_5": "5. สินค้าคงคลังไวน์",
+    "smart_kitchen_helps_6": "6. รายการช้อปปิ้ง",
+    "smart_support_helps_1": "1. เคล็ดลับการทำความสะอาดและการบำรุงรักษา",
+    "smart_support_helps_2": "2. การวินิจฉัยตนเองด้วยการคลิกเพียงครั้งเดียว",
+    "smart_support_helps_4": "4. รายงานปัญหา",
+    "smart_support_helps_5": "5. ติดต่อเรา",
+    "CL_SL_CM_about_usage_month_desc": "ข้อมูลที่แสดงนั้นเป็นค่าประมาณ ไม่ใช่การวัดที่แน่นอน \\n การประมาณการของเราขึ้นอยู่กับการทดสอบที่มีการควบคุม ดังนั้นผลลัพธ์จริงของคุณอาจแตกต่างกันไป \\n การใช้พลังงานในโลกแห่งความเป็นจริงขึ้นอยู่กับสภาพแวดล้อมและนิสัยเฉพาะของคุณ",
+    "air_care_helps_1_content": "ตรวจสอบสถานะอุณหภูมิและความชื้นของแต่ละห้องแบบเรียลไทม์ และประเมินความสบายและเตือนความจำตามเครื่องปรับอากาศ",
+    "smart_energy_helps_2_content": "คำนวณการใช้พลังงานและน้ำของทั้งบ้านในแต่ละวัน รายเดือน และรายปี นอกจากนี้คุณยังสามารถดูสถิติการใช้พลังงานของแต่ละอุปกรณ์ สัดส่วนการใช้พลังงานของแต่ละอุปกรณ์ภายในช่วงเวลาที่เลือก การใช้พลังงานโดยรวมและแต่ละอุปกรณ์",
+    "smart_support_helps_3": "3. การแก้ไขปัญหา"
 }
