--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "تعرف على المزيد حول الميزات الرئيسية للدعم الذكي",
     "smart_energy_helps": "تساعدك الطاقة الذكية على مراقبة الأجهزة والحفاظ عليها في حالة كفاءة في استخدام الطاقة",
     "smart_energy_helps_1_content": "قم بتنشيط وضع ECO لأجهزتك. قم بتحليل استهلاك الطاقة في الجهاز إحصائيًا. راقب بيانات توفير الطاقة وحدد هدف استخدام الطاقة.",
-    "smart_energy_helps_2": "2. مراقبة استهلاك الطاقة",
-    "smart_energy_helps_2_content": "احسب استهلاك الطاقة والمياه لكامل المنزل على أساس يومي وشهري وسنوي. كما يمكنك أيضًا عرض إحصائيات الاستهلاك للأجهزة الفردية، ونسبة استهلاك الطاقة لكل جهاز خلال الفترة المحددة، والاستهلاك الكلي والفردي للطاقة.",
-    "smart_energy_helps_3": "3. مساعد الطاقة",
     "smart_energy_helps_3_content": "حدد أهداف توفير الطاقة، وأرسل إشعارات للمستخدمين عند الوصول إلى قيم الهدف المحددة.",
     "air_care_helps": "تهدف العناية بالهواء إلى حل مشكلة التحكم الذكي في درجة الحرارة والرطوبة والهواء في المنزل بأكمله",
-    "air_care_helps_1": "1. تقييم الهواء",
-    "air_care_helps_1_content": "راقب حالة درجة الحرارة والرطوبة لكل غرفة في الوقت الفعلي، وقم بتوفير تقييمات الراحة والتذكيرات بناءً على حالة الهواء",
-    "air_care_helps_2": "2.التحسين بنقرة واحدة",
     "air_care_helps_2_content": "يمكن بدء التحسين بنقرة واحدة. نوفر خمسة مخططات تحسين مختلفة. يمكن تعديل كل وضع تحسين وفقًا لاحتياجات المستخدم، مما يوفر للمستخدمين حلول تحسين مخصصة.",
-    "air_care_helps_3": "عرض الغرفة بتقنية 3.3D",
     "air_care_helps_3_content": "قم بمراقبة حالة غرفتك والأجهزة من خلال التصور ثلاثي الأبعاد التفصيلي لمنزلك.",
     "smart_laundry_key": "الغسيل الذكي",
     "smart_laundry_helps": "تقدم خدمة Smart Laundry نصائح غسيل احترافية، ومساعد غسيل بديهي، وإدارة سلسة للمنظفات، مما يضمن تجربة غسيل لا مثيل لها",
-    "smart_laundry_helps_1": "1. الغسيل المخصص",
     "smart_laundry_helps_1_content": "دورات مخصصة بناءً على ملفات تعريف المستخدم وتفضيلاته، مع علامات للمواسم المختلفة، والأنشطة الخارجية، ورعاية الطفل، والمزيد.",
-    "smart_laundry_helps_2": "2.إدارة المنظفات",
     "smart_laundry_helps_2_content": "قم بتحسين روتين الغسيل الخاص بك باستخدام مساعد الغسيل الذكي في المنزل، والذي يتعرف تلقائيًا على ماركات المنظفات ويدير الجرعة في الغسالة الخاصة بك.",
-    "smart_laundry_helps_3": "3. تقرير استخدام الغسيل",
     "smart_laundry_helps_3_content": "يعرض تقارير أسبوعية وشهرية وسنوية عن استخدام المستخدم لبرنامج الغسيل، بالإضافة إلى استخدام المياه والكهرباء وتنظيف الأسطوانة خلال الشهر.",
     "smart_kitchen_key": "المطبخ الذكي",
     "smart_kitchen_helps": "يوفر لك المطبخ الذكي تجربة طهي ذكية غير مسبوقة، بما في ذلك الوصفات الذكية، ومقارنات النبيذ، ومساعدي الوصفات، وإدارة المكونات والنبيذ والمشروبات",
-    "smart_kitchen_helps_1": "1.وصفة الشيف",
     "smart_kitchen_helps_1_content": "استمتع بوصفات الماجستير بنكهات فريدة عند طهيها في أفران مختلفة، والتي تتبع تعليمات طهي الوصفة بنقرة واحدة فقط.",
-    "smart_kitchen_helps_2": "2. مساعد الوصفة",
     "smart_kitchen_helps_2_content": "قم بتخصيص وإنشاء الوصفات بناءً على تفضيلاتك الشخصية بما في ذلك التغذية والمأكولات وأسلوب الحياة والحساسية.",
-    "smart_kitchen_helps_3": "3.إدارة الغذاء",
     "smart_kitchen_helps_3_content": "أضف واعرض تفاصيل المكونات المستخدمة بشكل متكرر مثل تاريخ انتهاء الصلاحية. قم بمطابقة وصفات الطعام المناسبة بسرعة وأرسل المكونات المفقودة إلى قائمة التسوق.",
-    "smart_kitchen_helps_4": "إدارة المشروبات",
     "smart_kitchen_helps_4_content": "أضف المشروبات وقم بإنشاء قائمة مشروبات، واعرض معلومات مفصلة عن كل مشروب مخزن على حدة.",
-    "smart_kitchen_helps_5": "جرد النبيذ",
     "smart_kitchen_helps_5_content": "قم بالمسح لإنشاء قائمة قبو النبيذ بواسطة VIvino، وتعيين تذكيرات لفترة الشرب المثالية والتوصية بمواءمة الطعام بناءً على نوع النبيذ.",
-    "smart_kitchen_helps_6": "6. قائمة التسوق",
     "smart_kitchen_helps_6_content": "قم بإنشاء قائمة التسوق بناءً على الوصفة، وقم بتمييز العناصر التي تمتلكها بالفعل والتي اشتريتها كمرجع للتسوق.",
     "smart_support_key": "الدعم الذكي",
     "smart_support_helps": "يوفر الدعم الذكي مساعدة شاملة لأجهزتك. يمكنك الحصول على نصائح التنظيف والعناية للصيانة اليومية، والتشخيص الذاتي بنقرة واحدة للتحقق من حالة جميع أجهزتك وتقديم حلول ممكنة لأي عمليات غير طبيعية",
-    "smart_support_helps_1": "1. نصائح التنظيف والصيانة",
     "smart_support_helps_1_content": "تقديم اقتراحات بشأن التنظيف والصيانة اليومية للمنتج.",
-    "smart_support_helps_2": "2. التشخيص الذاتي بنقرة واحدة",
     "smart_support_helps_2_content": "فحص ذاتي بنقرة واحدة لمعرفة حالة جميع الأجهزة المنزلية. عند اكتشاف مشكلة، قم بتقديم الحلول الموصى بها.",
-    "smart_support_helps_3": "استكشاف الأخطاء وإصلاحها",
     "smart_support_helps_3_content": "عندما يواجه الجهاز مشكلة، يمكن للمستخدمين المساعدة الذاتية واستكشاف الأخطاء وإصلاحها وفقًا لدليل الخطأ.",
-    "smart_support_helps_4": "4. الإبلاغ عن المشكلة",
     "smart_support_helps_4_content": "إذا كانت هناك مشاكل مع التطبيق أو استخدام المنتج، يمكن للمستخدمين إرسال تعليقاتهم عبر الإنترنت لتقليل وقت الاتصال مع مركز الاتصال.",
-    "smart_support_helps_5": "5.اتصل بنا",
     "smart_support_helps_5_content": "يمكن للمستخدمين التواصل معنا عبر الهاتف والبريد الإلكتروني والموقع الرسمي.",
     "block_key": "حاجز",
     "guide_tips_device_1": "هذه هي علامة التبويب <b> الصفحة الرئيسية الجديدة. </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "الجهاز يحتاج إلى الاهتمام.",
     "CL_DV_RF_next_cleaning_will_be": "التنظيف القادم سيكون **",
     "CL_DV_RF_last_clean_was": "آخر عملية تنظيف كانت **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "نصائح التنظيف والعناية",
     "CL_CF_AS_needs_attention": "الجهاز يحتاج إلى الاهتمام.",
     "CL_CF_AS_run_normal_condition": "جهازك يعمل بحالة طبيعية.",
     "CL_DV_WM_offline_content1": "تحقق مما إذا كان جهازك موصولًا ومشغّلًا.",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "ساخن جدا",
     "CL_CF_HP_card": "بطاقة",
     "CL_CF_HP_enter_card_name": "أدخل اسم البطاقة...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "الرجاء تحديد مكون واحد على الأقل.",
     "CL_CF_FM_no_shopping_items": "لا يوجد عناصر للتسوق",
     "CL_CF_FM_add_food_from_below": "أضف الطعام من الأسفل",
     "CL_CF_FM_x_has_been_removed": "** تمت الإزالة.",
-    "CL_CF_CO_waiting": "منتظر"
+    "CL_CF_CO_waiting": "منتظر",
+    "CL_CF_HP_delete_card_tips": "هل أنت متأكد أنك تريد حذف البطاقة؟",
+    "smart_energy_helps_1": "1. نقرة واحدة صديقة للبيئة",
+    "smart_energy_helps_2": "2. مراقبة استهلاك الطاقة",
+    "smart_energy_helps_3": "3. مساعد الطاقة",
+    "air_care_helps_1": "1. تقييم الهواء",
+    "smart_laundry_helps_2": "2. إدارة المنظفات",
+    "air_care_helps_2": "2. التحسين بنقرة واحدة",
+    "air_care_helps_3": "3. عرض الغرفة ثلاثي الأبعاد",
+    "smart_laundry_helps_1": "1. الغسيل المخصص",
+    "smart_laundry_helps_3": "3. تقرير استخدام الغسيل",
+    "smart_kitchen_helps_1": "1. وصفة الشيف",
+    "smart_kitchen_helps_2": "2. مساعد الوصفات",
+    "smart_kitchen_helps_3": "3. إدارة الغذاء",
+    "smart_kitchen_helps_4": "4. إدارة المشروبات",
+    "smart_kitchen_helps_5": "5. جرد النبيذ",
+    "smart_kitchen_helps_6": "6. قائمة التسوق",
+    "smart_support_helps_1": "1. نصائح التنظيف والصيانة",
+    "smart_support_helps_2": "2. التشخيص الذاتي بنقرة واحدة",
+    "smart_support_helps_4": "4. الإبلاغ عن المشكلة",
+    "smart_support_helps_5": "5. اتصل بنا",
+    "CL_SL_CM_about_usage_month_desc": "البيانات المعروضة هي تقديرات وليست قياسات دقيقة. \\n تعتمد تقديراتنا على اختبارات خاضعة للرقابة، لذا قد تختلف نتائجك الفعلية. \\n يعتمد استخدام الطاقة في العالم الحقيقي على بيئتك وعاداتك المحددة.",
+    "air_care_helps_1_content": "قم بمراقبة درجة الحرارة وحالة الرطوبة لكل غرفة في الوقت الفعلي، وقم بتوفير تقييمات الراحة والتذكيرات بناءً على حالة الهواء.",
+    "smart_energy_helps_2_content": "احسب استهلاك المنزل بالكامل من الكهرباء والمياه على أساس يومي وشهري وسنوي، كما يمكنك الاطلاع على إحصائيات استهلاك الأجهزة الفردية، ونسبة استهلاك الطاقة لكل جهاز خلال الفترة المحددة، والاستهلاك الكلي والفردي للطاقة.",
+    "smart_support_helps_3": "3.استكشاف الأخطاء وإصلاحها"
 }
