--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "Obtenga más información sobre las características clave de Smart Support",
     "smart_energy_helps": "Smart Energy le ayuda a monitorear y mantener los dispositivos en un estado de eficiencia energética",
     "smart_energy_helps_1_content": "Activa el modo ECO de tus electrodomésticos. Analiza estadísticamente el consumo energético de los dispositivos. Monitoriza los datos de ahorro energético y establece un objetivo de consumo energético.",
-    "smart_energy_helps_2": "2. Monitoreo del consumo de energía",
-    "smart_energy_helps_2_content": "Calcule el consumo de energía y agua de toda la casa de forma diaria, mensual y anual. También puede ver las estadísticas de consumo de dispositivos individuales, la proporción de consumo de energía de cada dispositivo dentro del período seleccionado, el consumo de energía general e individual.",
-    "smart_energy_helps_3": "3. Asistente de energía",
     "smart_energy_helps_3_content": "Establezca objetivos de ahorro de energía y envíe notificaciones a los usuarios cuando se alcancen los valores objetivo establecidos.",
     "air_care_helps": "Air care tiene como objetivo resolver el control inteligente de la temperatura, la humedad y el aire en toda la casa.",
-    "air_care_helps_1": "1. Evaluación del aire",
-    "air_care_helps_1_content": "Monitorea el estado de temperatura y humedad de cada habitación en tiempo real, y proporciona evaluaciones de confort y recordatorios según la condición del aire.",
-    "air_care_helps_2": "2.Optimización con un solo clic",
     "air_care_helps_2_content": "La optimización se puede iniciar con un solo clic. Ofrecemos cinco esquemas de optimización diferentes. Cada modo de optimización se puede ajustar según las necesidades del usuario, lo que le permite obtener soluciones de optimización personalizadas.",
-    "air_care_helps_3": "Vista de la habitación 3.3D",
     "air_care_helps_3_content": "Vigila el estado de tu habitación y tus electrodomésticos a través de una visualización 3D detallada de tu hogar.",
     "smart_laundry_key": "Lavandería inteligente",
     "smart_laundry_helps": "Smart Laundry ofrece consejos de lavado de expertos, un asistente de lavado intuitivo y una gestión perfecta del detergente, lo que garantiza una experiencia de lavado incomparable.",
-    "smart_laundry_helps_1": "1.Lavandería personalizada",
     "smart_laundry_helps_1_content": "Ciclos personalizados según los perfiles y preferencias del usuario, con etiquetas para diferentes estaciones, actividades al aire libre, cuidado del bebé y más.",
-    "smart_laundry_helps_2": "2. Gestión de detergentes",
     "smart_laundry_helps_2_content": "Optimiza tu rutina de lavado con Smart Home Laundry Assistant, reconoce automáticamente las marcas de detergente y administra la dosis en tu lavadora.",
-    "smart_laundry_helps_3": "3. Informe de uso de lavandería",
     "smart_laundry_helps_3_content": "Muestra informes semanales, mensuales y anuales sobre el uso del programa de lavandería por parte del usuario, así como el uso mensual de agua y electricidad y la limpieza del tambor.",
     "smart_kitchen_key": "Cocina inteligente",
     "smart_kitchen_helps": "Smart Kitchen le ofrece una experiencia de cocina inteligente sin precedentes, que incluye recetas inteligentes, maridajes de vinos, asistentes de recetas y gestión de ingredientes, vinos y bebidas.",
-    "smart_kitchen_helps_1": "1. Receta del chef",
     "smart_kitchen_helps_1_content": "Experimente recetas maestras con sabores únicos al cocinarlas en diferentes hornos, que siguen las instrucciones de cocción de la receta con solo un clic.",
-    "smart_kitchen_helps_2": "2. Asistente de recetas",
     "smart_kitchen_helps_2_content": "Personalice y genere recetas según sus preferencias personales, incluidas nutrición, cocina, estilo de vida y alergias.",
-    "smart_kitchen_helps_3": "3. Gestión de alimentos",
     "smart_kitchen_helps_3_content": "Agregue y visualice detalles de los ingredientes que usa con frecuencia, como la fecha de vencimiento. Encuentre rápidamente recetas de alimentos adecuados y envíe los ingredientes faltantes a la lista de compras.",
-    "smart_kitchen_helps_4": "Gestión de la bebida",
     "smart_kitchen_helps_4_content": "Agregue bebidas y cree una lista de bebidas, vea información detallada de cada bebida almacenada.",
-    "smart_kitchen_helps_5": "Vino Inventario",
     "smart_kitchen_helps_5_content": "Escanee para crear una lista de vinos de VIvino, establecer recordatorios para el período óptimo de consumo y recomendar combinaciones de alimentos según el tipo de vino.",
-    "smart_kitchen_helps_6": "6. Lista de compras",
     "smart_kitchen_helps_6_content": "Genera la lista de compras en base a la receta, marca los artículos que ya tienes y adquiriste como tu referencia de compra.",
     "smart_support_key": "Soporte inteligente",
     "smart_support_helps": "Smart Support ofrece asistencia integral para sus dispositivos. Puede obtener consejos de limpieza y cuidado para el mantenimiento diario, autodiagnóstico con un solo clic para verificar el estado de todos sus dispositivos y brindar posibles soluciones para cualquier funcionamiento anormal.",
-    "smart_support_helps_1": "1. Consejos de limpieza y mantenimiento",
     "smart_support_helps_1_content": "Dar sugerencias para la limpieza y mantenimiento diario del producto.",
-    "smart_support_helps_2": "2. Autodiagnóstico con un solo clic",
     "smart_support_helps_2_content": "Inspección automática con un solo clic para conocer el estado de todos los electrodomésticos del hogar. Cuando se detecta un problema, se ofrecen soluciones recomendadas.",
-    "smart_support_helps_3": "Solución de problemas",
     "smart_support_helps_3_content": "Cuando el dispositivo tiene un problema, los usuarios pueden autoayudarse, solucionar el problema y detectarlo según la guía de fallas.",
-    "smart_support_helps_4": "4. Informar un problema",
     "smart_support_helps_4_content": "Si hay problemas con la aplicación o el uso del producto, los usuarios pueden enviar comentarios en línea para reducir el tiempo de comunicación con el centro de llamadas.",
-    "smart_support_helps_5": "5.Contáctenos",
     "smart_support_helps_5_content": "Los usuarios pueden contactarnos a través de teléfono, correo electrónico y sitio web oficial.",
     "block_key": "Bloquear",
     "guide_tips_device_1": "Esta es la <b> nueva pestaña de la página de inicio. </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "El dispositivo necesita atención.",
     "CL_DV_RF_next_cleaning_will_be": "La próxima limpieza será **",
     "CL_DV_RF_last_clean_was": "La última limpieza fue **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Consejos de limpieza y cuidado",
     "CL_CF_AS_needs_attention": "El dispositivo necesita atención.",
     "CL_CF_AS_run_normal_condition": "Su dispositivo funciona en condiciones normales.",
     "CL_DV_WM_offline_content1": "Verifique si su electrodoméstico está enchufado y si tiene energía.",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "Extra caliente",
     "CL_CF_HP_card": "Tarjeta",
     "CL_CF_HP_enter_card_name": "Introduzca el nombre de la tarjeta...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Seleccione al menos un ingrediente.",
     "CL_CF_FM_no_shopping_items": "No hay artículos de compra",
     "CL_CF_FM_add_food_from_below": "Añade comida desde abajo",
     "CL_CF_FM_x_has_been_removed": "** ha sido eliminado.",
-    "CL_CF_CO_waiting": "espera"
+    "CL_CF_CO_waiting": "espera",
+    "CL_CF_HP_delete_card_tips": "¿Estás seguro que deseas eliminar la tarjeta?",
+    "smart_energy_helps_1": "1. Ecología con un solo clic",
+    "smart_energy_helps_2": "2. Monitoreo del consumo de energía",
+    "smart_energy_helps_3": "3. Asistente de energía",
+    "air_care_helps_1": "1. Evaluación del aire",
+    "smart_laundry_helps_2": "2. Gestión de detergentes",
+    "air_care_helps_2": "2. Optimización con un solo clic",
+    "air_care_helps_3": "3. Vista de la habitación en 3D",
+    "smart_laundry_helps_1": "1. Lavandería personalizada",
+    "smart_laundry_helps_3": "3. Informe de uso de lavandería",
+    "smart_kitchen_helps_1": "1. Receta del chef",
+    "smart_kitchen_helps_2": "2. Asistente de recetas",
+    "smart_kitchen_helps_3": "Gestión de alimentos",
+    "smart_kitchen_helps_4": "4. Gestión de la bebida",
+    "smart_kitchen_helps_5": "5. Vino Inventario",
+    "smart_kitchen_helps_6": "6. Lista de compras",
+    "smart_support_helps_1": "1. Consejos de limpieza y mantenimiento",
+    "smart_support_helps_2": "2. Autodiagnóstico con un solo clic",
+    "smart_support_helps_4": "4. Informar de un problema",
+    "smart_support_helps_5": "5. Contáctenos",
+    "CL_SL_CM_about_usage_month_desc": "Los datos que se muestran son \\n , no mediciones exactas. Nuestras estimaciones se basan en pruebas controladas, por lo que los resultados reales pueden variar. El uso de energía en el mundo \\n depende de su entorno y sus hábitos específicos.",
+    "air_care_helps_1_content": "Monitoree el estado de temperatura y humedad de cada habitación en tiempo real y proporcione evaluaciones de confort y recordatorios según las condiciones del aire.",
+    "smart_energy_helps_2_content": "Calcula el consumo de energía y agua de toda la casa de forma diaria, mensual y anual. También puedes ver las estadísticas de consumo de dispositivos individuales, la proporción de consumo de energía de cada dispositivo dentro del período seleccionado, el consumo de energía total e individual.",
+    "smart_support_helps_3": "3. Solución de problemas"
 }
