--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "スマートサポートの主な機能の詳細",
     "smart_energy_helps": "スマートエネルギーは、デバイスを監視し、エネルギー効率の良い状態に保つのに役立ちます",
     "smart_energy_helps_1_content": "家電製品の ECO モードを有効にします。デバイスのエネルギー消費を統計的に分析します。省エネデータを監視し、エネルギー使用量の目標を設定します。",
-    "smart_energy_helps_2": "2.エネルギー消費量の監視",
-    "smart_energy_helps_2_content": "家全体の電力と水の消費量を日、月、年単位で計算します。また、個々のデバイスの消費統計、選択した期間内の各デバイスのエネルギー消費の割合、全体および個々のエネルギー消費量を表示することもできます。",
-    "smart_energy_helps_3": "3.エネルギーアシスタント",
     "smart_energy_helps_3_content": "省エネ目標を設定し、設定した目標値に達するとユーザーに通知を送信します。",
     "air_care_helps": "エアケアは、家全体の温度、湿度、空気のインテリジェントな制御の解決を目指しています。",
-    "air_care_helps_1": "1.空気評価",
-    "air_care_helps_1_content": "各部屋の温度と湿度の状態をリアルタイムで監視し、空調状況に応じて快適性の評価とリマインダーを提供します。",
-    "air_care_helps_2": "2.ワンクリック最適化",
     "air_care_helps_2_content": "最適化はワンクリックで開始できます。5 つの異なる最適化スキームを提供しています。各最適化モードはユーザーのニーズに応じて調整でき、ユーザーにカスタマイズされた最適化ソリューションを提供します。",
-    "air_care_helps_3": "3.3Dルームビュー",
     "air_care_helps_3_content": "家の詳細な 3D 視覚化を通じて、部屋の状態や家電製品を監視します。",
     "smart_laundry_key": "スマートランドリー",
     "smart_laundry_helps": "スマートランドリーは、専門家による洗濯のヒント、直感的な洗濯アシスタント、シームレスな洗剤管理を提供し、比類のない洗濯体験を保証します。",
-    "smart_laundry_helps_1": "1.カスタマイズランドリー",
     "smart_laundry_helps_1_content": "ユーザーのプロフィールと好みに基づいて、さまざまな季節、屋外アクティビティ、ベビーケアなどのタグが付いたパーソナライズされたサイクル。",
-    "smart_laundry_helps_2": "2.洗剤管理",
     "smart_laundry_helps_2_content": "スマートホームランドリーアシスタントを使用して洗濯ルーチンを最適化し、洗剤のブランドを自動的に認識して洗濯機の洗剤量を管理します。",
-    "smart_laundry_helps_3": "3.ランドリー使用状況レポート",
     "smart_laundry_helps_3_content": "ユーザーのランドリー プログラムの使用状況、月ごとの水と電気の使用量、ドラムのクリーニングに関する週次、月次、年次レポートを表示します。",
     "smart_kitchen_key": "スマートキッチン",
     "smart_kitchen_helps": "スマートキッチンは、インテリジェントなレシピ、ワインの組み合わせ、レシピアシスタント、材料、ワイン、飲み物の管理など、これまでにないインテリジェントな調理体験を提供します。",
-    "smart_kitchen_helps_1": "1.シェフのレシピ",
     "smart_kitchen_helps_1_content": "ワンクリックでレシピの調理手順に従い、さまざまなオーブンで調理して独特の風味を楽しめるマスターのレシピを体験してください。",
-    "smart_kitchen_helps_2": "2.レシピアシスタント",
     "smart_kitchen_helps_2_content": "栄養、料理、ライフスタイル、アレルギーなどの個人の好みに基づいてレシピをカスタマイズして生成します。",
-    "smart_kitchen_helps_3": "3.食品管理",
     "smart_kitchen_helps_3_content": "有効期限など、よく使用する食材の詳細を追加して表示します。適切な料理のレシピをすばやく照合し、不足している食材を買い物リストに送信します。",
-    "smart_kitchen_helps_4": "ドリンク管理",
     "smart_kitchen_helps_4_content": "飲み物を追加して飲酒リストを作成し、保存されているすべての飲み物の詳細情報を表示します。",
-    "smart_kitchen_helps_5": "ワイン在庫",
     "smart_kitchen_helps_5_content": "スキャンすると、VIvino によってワインセラー リストが作成され、最適な飲酒期間のリマインダーが設定され、ワインの種類に基づいて料理との組み合わせが推奨されます。",
-    "smart_kitchen_helps_6": "6.買い物リスト",
     "smart_kitchen_helps_6_content": "レシピに基づいて買い物リストを生成し、すでに所有しているアイテムや入手したアイテムを買い物の参考としてマークします。",
     "smart_support_key": "スマートサポート",
     "smart_support_helps": "スマートサポートは、デバイスに関する包括的なサポートを提供します。日常のメンテナンスのためのクリーニングとケアのヒントを入手したり、ワンクリックの自己診断ですべてのデバイスの状態をチェックしたり、異常な動作に対する可能な解決策を提供したりできます。",
-    "smart_support_helps_1": "1. 清掃とメンテナンスのヒント",
     "smart_support_helps_1_content": "製品の日常的な清掃とメンテナンスに関する提案をします。",
-    "smart_support_helps_2": "2.ワンクリック自己診断",
     "smart_support_helps_2_content": "ワンクリックで自己点検し、すべての家電製品の状態を把握します。問題が検出されると、推奨される解決策を提供します。",
-    "smart_support_helps_3": "トラブルシューティング",
     "smart_support_helps_3_content": "デバイスに問題が発生した場合、ユーザーは障害ガイドに従ってセルフヘルプを行い、トラブルシューティングを行い、問題を解決できます。",
-    "smart_support_helps_4": "4.問題を報告する",
     "smart_support_helps_4_content": "アプリや製品の使用に問題がある場合、ユーザーはオンラインでフィードバックすることで、コールセンターとの通信時間を短縮できます。",
-    "smart_support_helps_5": "5.お問い合わせ",
     "smart_support_helps_5_content": "ユーザーは電話、電子メール、公式ウェブサイトを通じて当社に連絡できます。",
     "block_key": "ブロック",
     "guide_tips_device_1": "これは<b>新しいホームページ タブです。 </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "デバイスに注意が必要です。",
     "CL_DV_RF_next_cleaning_will_be": "次回の清掃は**",
     "CL_DV_RF_last_clean_was": "前回の清掃は**",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "クリーニングとお手入れのヒント",
     "CL_CF_AS_needs_attention": "デバイスに注意が必要です。",
     "CL_CF_AS_run_normal_condition": "デバイスは正常に動作しています。",
     "CL_DV_WM_offline_content1": "機器が差し込まれ、電源がオンになっているか確認してください。",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "超ホット",
     "CL_CF_HP_card": "カード",
     "CL_CF_HP_enter_card_name": "カード名を入力してください...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "少なくとも 1 つの材料を選択してください。",
     "CL_CF_FM_no_shopping_items": "ショッピングアイテムはありません",
     "CL_CF_FM_add_food_from_below": "下から食べ物を追加",
     "CL_CF_FM_x_has_been_removed": "** は削除されました。",
-    "CL_CF_CO_waiting": "待っている"
+    "CL_CF_CO_waiting": "待っている",
+    "CL_CF_HP_delete_card_tips": "カードを削除してもよろしいですか?",
+    "smart_energy_helps_1": "1. ワンクリックエコ",
+    "smart_energy_helps_2": "2. エネルギー消費の監視",
+    "smart_energy_helps_3": "3. エネルギーアシスタント",
+    "air_care_helps_1": "1. 空気評価",
+    "smart_laundry_helps_2": "2. 洗剤管理",
+    "air_care_helps_2": "2. ワンクリック最適化",
+    "air_care_helps_3": "3. 3Dルームビュー",
+    "smart_laundry_helps_1": "1. カスタマイズランドリー",
+    "smart_laundry_helps_3": "3. ランドリー使用状況レポート",
+    "smart_kitchen_helps_1": "1. シェフのレシピ",
+    "smart_kitchen_helps_2": "2. レシピアシスタント",
+    "smart_kitchen_helps_3": "3. 食品管理",
+    "smart_kitchen_helps_4": "4. ドリンク管理",
+    "smart_kitchen_helps_5": "5. ワイン在庫",
+    "smart_kitchen_helps_6": "6. 買い物リスト",
+    "smart_support_helps_1": "1. 清掃とメンテナンスのヒント",
+    "smart_support_helps_2": "2. ワンクリック自己診断",
+    "smart_support_helps_4": "4. 問題を報告する",
+    "smart_support_helps_5": "5. お問い合わせ",
+    "CL_SL_CM_about_usage_month_desc": "表示されるデータは推定値であり、正確な測定値ではありません。 \\n推定値は管理されたテストに基づいているため、実際の結果は異なる場合があります。 \\n実際のエネルギー使用量は、特定の環境と習慣によって異なります。",
+    "air_care_helps_1_content": "各部屋の温度と湿度の状態をリアルタイムで監視し、空調状況に応じて快適性の評価とリマインダーを提供します。",
+    "smart_energy_helps_2_content": "家全体の電力と水の消費量を日、月、年単位で計算します。また、個々のデバイスの消費統計、選択した期間内の各デバイスのエネルギー消費の割合、全体および個々のエネルギー消費量を表示することもできます。",
+    "smart_support_helps_3": "3. トラブルシューティング"
 }
