--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4459,50 +4459,29 @@
     "smart_support_l_m": "Izvedite več o ključnih funkcijah Smart Support",
     "smart_energy_helps": "Smart Energy vam pomaga spremljati in ohranjati naprave v energijsko učinkovitem stanju",
     "smart_energy_helps_1_content": "Aktiven ECO način vaših aparatov. Statistično analizirajte porabo energije naprave. Spremljajte podatke o varčevanju z energijo in nastavite ciljno porabo energije.",
-    "smart_energy_helps_2": "2. Spremljanje porabe energije",
-    "smart_energy_helps_2_content": "Izračunajte celotno hišno moč in porabo vode na dnevni, mesečni in letni osnovi. lahko si ogledate tudi statistiko porabe posameznih naprav, delež porabe energije posamezne naprave v izbranem obdobju, skupno in individualno porabo energije.",
-    "smart_energy_helps_3": "3. Energetski pomočnik",
     "smart_energy_helps_3_content": "Postavite cilje varčevanja z energijo in pošljite obvestila uporabnikom, ko so nastavljene ciljne vrednosti dosežene.",
     "air_care_helps": "Air Care želi rešiti inteligentno kontrolo temperature, vlažnosti in zraka v celotni hiši",
-    "air_care_helps_1": "1. Ocena zraka",
-    "air_care_helps_1_content": "Spremljajte stanje temperature in vlažnosti vsake sobe v realnem času ter zagotovite ocene udobja in opomnike glede na klimatsko stanje",
-    "air_care_helps_2": "2.Optimizacija z enim klikom",
     "air_care_helps_2_content": "Optimizacijo lahko zaženete z enim klikom. Ponujamo pet različnih optimizacijskih shem. Vsak način optimizacije je mogoče prilagoditi glede na potrebe uporabnikov, kar uporabnikom zagotavlja prilagojene rešitve optimizacije.",
-    "air_care_helps_3": "3.3D pogled na sobo",
     "air_care_helps_3_content": "S podrobno 3D vizualizacijo vašega doma spremljajte stanje vaše sobe in naprav.",
     "smart_laundry_key": "Pametna pralnica",
     "smart_laundry_helps": "Smart Laundry ponuja strokovne nasvete za pranje, intuitivnega pomočnika za pranje perila in brezhibno upravljanje detergentov, kar zagotavlja neprimerljivo izkušnjo pranja perila",
-    "smart_laundry_helps_1": "1. Pralnica po meri",
     "smart_laundry_helps_1_content": "Prilagojeni cikli na podlagi uporabniških profilov in preferenc, z oznakami za različne letne čase, dejavnosti na prostem, nego dojenčkov in več.",
-    "smart_laundry_helps_2": "2. Ravnanje z detergenti",
     "smart_laundry_helps_2_content": "Optimizirajte svojo rutino pranja perila s programom Smart Home Laundry Assistant, samodejno prepoznajte znamke detergentov in upravljajte doziranje v vašem pralnem stroju.",
-    "smart_laundry_helps_3": "3. Poročilo o uporabi perila",
     "smart_laundry_helps_3_content": "Prikaže tedenska, mesečna in letna poročila o uporabnikovi uporabi programa za pranje perila ter mesečno porabo vode in elektrike ter čiščenje bobna.",
     "smart_kitchen_key": "Pametna kuhinja",
     "smart_kitchen_helps": "Smart Kitchen vam nudi inteligentno kuharsko izkušnjo brez primere, vključno z inteligentnimi recepti, združevanjem vin, pomočniki za recepte ter upravljanjem sestavin, vina in pijače.",
-    "smart_kitchen_helps_1": "1.Chef recept",
     "smart_kitchen_helps_1_content": "Doživite recepte mojstra v edinstvenih okusih, ko jih kuhate v različnih pečicah, ki sledijo navodilom za kuhanje recepta z enim klikom.",
-    "smart_kitchen_helps_2": "Pomočnik za recepte",
     "smart_kitchen_helps_2_content": "Prilagodite in ustvarite recepte na podlagi vaših osebnih preferenc, vključno s prehrano, kulinariko, življenjskim slogom in alergijami.",
-    "smart_kitchen_helps_3": "3. Upravljanje s hrano",
     "smart_kitchen_helps_3_content": "Dodajte in si oglejte podrobnosti o pogosto uporabljenih sestavinah, kot je datum poteka. Hitro povežite ustrezne recepte za hrano in pošljite manjkajoče sestavine na nakupovalni seznam.",
-    "smart_kitchen_helps_4": "Upravljanje s pijačo",
     "smart_kitchen_helps_4_content": "Dodajte pijače in ustvarite seznam pitja, oglejte si podrobne informacije o vsaki posamezni shranjeni pijači.",
-    "smart_kitchen_helps_5": "Inventar vina",
     "smart_kitchen_helps_5_content": "Skenirajte, da ustvarite seznam vinskih kleti VIvino, nastavite opomnike za optimalno obdobje pitja in priporočite kombiniranje hrane glede na vrsto vina.",
-    "smart_kitchen_helps_6": "6. Nakupovalni seznam",
     "smart_kitchen_helps_6_content": "Ustvarite nakupovalni seznam na podlagi recepta, označite predmete, ki jih že imate in ste jih pridobili, kot svojo nakupovalno referenco.",
     "smart_support_key": "Pametna podpora",
     "smart_support_helps": "Smart Support zagotavlja celovito pomoč za vaše naprave. Dobite lahko nasvete za čiščenje in nego za vsakodnevno vzdrževanje, samodiagnostiko z enim klikom za preverjanje stanja vseh vaših naprav in zagotovite možne rešitve za kakršna koli neobičajna delovanja",
-    "smart_support_helps_1": "1. Nasveti za čiščenje in vzdrževanje",
     "smart_support_helps_1_content": "Podajte predloge za dnevno čiščenje in vzdrževanje izdelka.",
-    "smart_support_helps_2": "2. Samodiagnoza z enim klikom",
     "smart_support_helps_2_content": "Samopregled z enim klikom za razumevanje stanja vseh gospodinjskih aparatov. Ko je zaznana težava, zagotovite priporočene rešitve.",
-    "smart_support_helps_3": "Odpravljanje težav",
     "smart_support_helps_3_content": "Ko ima naprava težave, si lahko uporabniki sami pomagajo, odpravijo težave in rešijo težavo v skladu z navodili za napake.",
-    "smart_support_helps_4": "4. Prijavite težavo",
     "smart_support_helps_4_content": "Če pride do težav z APP ali uporabo izdelka, lahko uporabniki pošljejo povratne informacije na spletu, da skrajšajo čas komunikacije s klicnim centrom.",
-    "smart_support_helps_5": "5. Kontaktirajte nas",
     "smart_support_helps_5_content": "Uporabniki nas lahko kontaktirajo preko telefona, elektronske pošte in uradne spletne strani.",
     "block_key": "Blokiraj",
     "guide_tips_device_1": "To je novi zavihek domače strani <b> . </b>",
@@ -4598,7 +4577,7 @@
     "CL_CF_CO_device_needs_attention": "Naprava potrebuje pozornost.",
     "CL_DV_RF_next_cleaning_will_be": "Naslednje čiščenje bo **",
     "CL_DV_RF_last_clean_was": "Zadnje čiščenje je bilo **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Nasveti za čiščenje in nego",
     "CL_CF_AS_needs_attention": "Naprava potrebuje pozornost.",
     "CL_CF_AS_run_normal_condition": "Vaša naprava deluje v normalnem stanju.",
     "CL_DV_WM_offline_content1": "Preverite, ali je vaša naprava priključena in ali je vklopljena.",
@@ -4611,10 +4590,33 @@
     "CL_DV_WM_extra_hot": "Ekstra vroče",
     "CL_CF_HP_card": "kartica",
     "CL_CF_HP_enter_card_name": "Vnesite ime kartice ...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Prosimo izberite vsaj eno sestavino.",
     "CL_CF_FM_no_shopping_items": "Brez nakupovalnih artiklov",
     "CL_CF_FM_add_food_from_below": "Dodajte hrano od spodaj",
     "CL_CF_FM_x_has_been_removed": "** je bil odstranjen.",
-    "CL_CF_CO_waiting": "čakanje"
+    "CL_CF_CO_waiting": "čakanje",
+    "CL_CF_HP_delete_card_tips": "Ali ste prepričani, da želite izbrisati kartico?",
+    "smart_energy_helps_1": "1. Eko z enim klikom",
+    "smart_energy_helps_2": "2. Spremljanje porabe energije",
+    "smart_energy_helps_3": "3. Energetski pomočnik",
+    "air_care_helps_1": "1. Ocena zraka",
+    "smart_laundry_helps_2": "2. Ravnanje z detergenti",
+    "air_care_helps_2": "2. Optimizacija z enim klikom",
+    "air_care_helps_3": "3. 3D pogled iz sobe",
+    "smart_laundry_helps_1": "1. Pralnica po meri",
+    "smart_laundry_helps_3": "3. Poročilo o uporabi perila",
+    "smart_kitchen_helps_1": "1. Recept kuharja",
+    "smart_kitchen_helps_2": "Pomočnik za recepte",
+    "smart_kitchen_helps_3": "3. Upravljanje s hrano",
+    "smart_kitchen_helps_4": "4. Upravljanje s pijačo",
+    "smart_kitchen_helps_5": "5. Inventar vina",
+    "smart_kitchen_helps_6": "6. Nakupovalni seznam",
+    "smart_support_helps_1": "1. Nasveti za čiščenje in vzdrževanje",
+    "smart_support_helps_2": "2. Samodiagnoza z enim klikom",
+    "smart_support_helps_4": "4. Prijavite težavo",
+    "smart_support_helps_5": "5. Kontaktirajte nas",
+    "CL_SL_CM_about_usage_month_desc": "Prikazani podatki so ocene, ne natančne meritve. \\n Naše ocene temeljijo na kontroliranih testih, zato se lahko vaši dejanski rezultati razlikujejo. \\n Dejanska poraba energije je odvisna od vašega okolja in navad.",
+    "air_care_helps_1_content": "Spremljajte stanje temperature in vlažnosti vsake sobe v realnem času ter zagotovite ocene udobja in opomnike glede na klimatsko stanje.",
+    "smart_energy_helps_2_content": "Izračunajte celotno hišno moč in porabo vode na dnevni, mesečni in letni osnovi. Ogledate si lahko tudi statistiko porabe posameznih naprav, delež porabe energije posamezne naprave v izbranem obdobju, skupno in individualno porabo energije.",
+    "smart_support_helps_3": "3. Odpravljanje težav"
 }
